fix:#2894/CLNRest: implement listclosedchannels

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -18,6 +18,8 @@
     "general.continueQuestion": "Continuer?",
     "general.readOnlyWallet": "Portefeuille en lecture seule",
     "general.custodialWallet": "Portefeuille de garde",
+    "general.selfCustodial": "Self-custodial",
+    "general.custodial": "Custodial",
     "general.show": "Montrer",
     "general.close": "Fermer",
     "general.hide": "Masquer",
@@ -26,6 +28,7 @@
     "general.goBack": "Retour",
     "general.lightning": "Lightning",
     "general.onchain": "On-chain",
+    "general.cashu": "Cashu",
     "general.activity": "Activité",
     "general.transaction": "Transaction",
     "general.confirmed": "Confirmé",
@@ -96,6 +99,7 @@
     "general.invalid": "Invalide",
     "general.createdAt": "Créé à",
     "general.expiresAt": "Expire à",
+    "general.expiresOn": "Expires on",
     "general.id": "ID",
     "general.hash": "Hash",
     "general.kind": "Sorte",
@@ -133,6 +137,15 @@
     "general.unknown": "Inconnu",
     "general.retry": "Réessayer",
     "general.response": "Réponse",
+    "general.approximately": "Approximately",
+    "general.selfCustody": "Self-custody",
+    "general.ecash": "Ecash",
+    "general.errorConnecting": "Error connecting",
+    "general.bitcoinPayment": "Bitcoin payment",
+    "general.unspent": "Unspent",
+    "general.remote": "Distant",
+    "general.getStarted": "Commencer",
+    "general.comingSoon": "Coming soon",
     "channel.status.good": "Bien",
     "channel.status.stable": "Écurie",
     "channel.status.unstable": "Instable",
@@ -713,6 +726,13 @@
     "views.ContactInfo.title": "Informations de contact",
     "views.Tools.title": "Outils",
     "views.Tools.developers": "Développeurs",
+    "views.Tools.cashu": "Cashu Tools",
+    "views.Tools.cashu.bumpWalletCounters": "Bump wallet counters",
+    "views.Tools.cashu.bumpWalletCounters.subtitle": "Helpful if your wallet counters get out of sync and you encounter 'Outputs have already been signed before' errors.",
+    "views.Tools.cashu.deleteData": "Delete all Cashu data",
+    "views.Tools.cashu.deleteData.confirmTitle": "Are you sure you want to delete all your Cashu data?",
+    "views.Tools.cashu.deleteData.confirmMessage": "Funds can still be restored by re-adding your mints, but transaction history will be lost.",
+    "stores.CashuStore.dataDeletedMessage": "Your Cashu data has been deleted.",
     "views.Tools.developerTools.title": "Outils de développement",
     "views.Tools.developerTools.noItemsExist": "Aucun élément n'existe",
     "views.Settings.title": "Réglages",
@@ -1015,6 +1035,7 @@
     "views.ActivityFilter.endDate": "Date de fin",
     "views.ActivityFilter.lightningPayments": "Paiements Lightning ",
     "views.ActivityFilter.onChainPayments": "Paiements On-chain",
+    "views.ActivityFilter.cashuPayments": "Cashu payments",
     "views.ActivityFilter.minimumAmount": "Montant minimum (sats)",
     "views.ActivityFilter.maximumAmount": "Montant maximum (sats)",
     "views.ActivityFilter.maximumAmountPlaceHolder":"Aucune limite",
@@ -1137,6 +1158,7 @@
     "components.ChannelPicker.modal.description.multiple": "Sélectionnez les canal(aux) à utiliser dans cette opération. Vous souhaiterez peut-être utiliser uniquement des canaux spécifiques pour préserver votre vie privée.",
     "components.LayerBalances.moreAccounts": "Plus de comptes",
     "components.LayerBalances.moveFundsToLn": "Transférer les fonds de la chaîne vers Lightning",
+    "components.LayerBalances.lightningViaEcash": "Lightning via ecash",
     "backends.LND.wsReq.warning": "Vous devrez peut-être activer la vérification de certificat pour effectuer ce type d'opérations.",
     "backends.LND.restReq.connectionError": "Erreur de connexion",
     "utils.handleAnything.lightningAddressError": "Erreur lors de la récupération des données d'adresse Lightning",
@@ -1160,6 +1182,8 @@
     "stores.LSPStore.error": "Erreur LSP",
     "stores.LSPStore.connectionError": "Impossible de se connecter à LSP. Veuillez vérifier vos paramètres LSP ou réessayer plus tard.",
     "stores.LightningAddressStore.preimageNotFound": "Aucune image préliminaire n'a été trouvée sur votre appareil. Avez-vous récemment changé d'appareil ?",
+    "stores.LightningAddressStore.Cashu.quoteNotPaid": "Quote not paid",
+    "stores.LightningAddressStore.Cashu.quotePaymentErr": "Error checking for quote payment",
     "error.connectionRefused": "Hôte inaccessible. Essayez de redémarrer votre noeud ou son processus Tor.",
     "error.hostUnreachable": "Hôte inaccessible. Essayez de redémarrer votre noeud ou son processus Tor.",
     "error.nodeConnectError": "Impossible de se connecter au nœud. Veuillez vérifier que l'hôte et le port sont corrects et que le service est en cours d'exécution.",
@@ -1173,6 +1197,7 @@
     "error.failureReasonInsufficientBalance": "Solde local insuffisant",
     "error.invalidMacaroon": "Macaron invalide. Veuillez vérifier que vous avez saisi le bon macaron pour ce nœud.",
     "error.invalidResponse": "Données de réponse non valides reçues du serveur",
+    "error.serviceConnection": "Error connecting to service. Please try again later.",
     "pos.views.Wallet.PosPane.noOrders": "Aucune commande ouverte pour le moment. Pour envoyer à Zeus, marquez la commande comme «autre type de paiement» avec une note qui comprend «Zeus», «BTC» ou «Bitcoin»",
     "pos.views.Wallet.PosPane.noOrdersStandalone": "Aucune commande ouverte pour le moment",
     "pos.views.Wallet.PosPane.noOrdersPaid": "Aucune commande n'a encore été payée",
@@ -1210,10 +1235,17 @@
     "views.Settings.LightningAddress.chooseHandle": "Choisissez un alias",
     "views.Settings.LightningAddress.zaplockerVerification": "Vérification du zaplocker",
     "views.Settings.LightningAddress.noPaymentsToRedeem": "Aucun paiement pour racheter. Revenez plus tard.",
+    "views.Settings.LightningAddress.noNeedToRedeem": "No redeem step required. Payments are sent directly to your wallet.",
     "views.Settings.LightningAddress.statusExplainer1": "Il s'agit du nombre de paiements qui peuvent vous être effectués pendant que vous êtes hors ligne.",
     "views.Settings.LightningAddress.statusExplainer2": "Plus de hachages de paiement seront envoyés automatiquement au serveur en cas de besoin, afin que vous puissiez continuer à recevoir des paiements.",
     "views.Settings.LightningAddress.generatingPreimages": "Générer des préimages",
     "views.Settings.LightningAddress.ChangeAddress": "Changement d'adresse",
+    "views.Settings.LightningAddress.webPortalPos": "Web portal: Point of Sale",
+    "views.Settings.LightningAddress.webPortalPos.enableFiat": "Enable fiat pricing",
+    "views.Settings.LightningAddress.webPortalPos.syncSettings": "Sync settings",
+    "views.Settings.LightningAddress.switchToCashu": "Switch to Cashu Lightning address",
+    "views.Settings.LightningAddress.switchToNWC": "Switch to NWC Lightning address",
+    "views.Settings.LightningAddress.switchToZaplocker": "Switch to Zaplocker Lightning address",
     "views.Settings.LightningAddress.nostrKeys.changeWarning": "AVERTISSEMENT: La modification de vos clés Nostr supprimera vos paiements en attente. Veuillez échanger vos paiements en attente avant de soumettre de nouvelles clés.",
     "views.Settings.LightningAddress.explainer1": "Pour commencer avec une adresse Lightning, vous devez d’abord disposer d’un canal Lightning du LSP ZEUS avec une liquidité entrante.",
     "views.Settings.LightningAddress.explainer2": "Le moyen le plus simple de le faire est d'acheter un canal 0-conf. Générez simplement une facture et payez-vous à partir d'un autre portefeuille Lightning.",
@@ -1221,6 +1253,11 @@
     "views.Settings.LightningAddress.get0ConfChan": "Obtenez le canal 0-Conf",
     "views.Settings.LightningAddress.getStandardChan": "Obtenir la chaîne standard",
     "views.Settings.LightningAddress.generateNew": "Générer de nouvelles pré-images",
+    "views.Settings.LightningAddress.upgrade": "Upgrade to ZEUS Pay+",
+    "views.Settings.LightningAddress.changeConnectionString": "Change connection string",
+    "views.Settings.LightningAddress.testConnectionString": "Test connection string",
+    "views.Settings.LightningAddress.connectionTestSuccess": "Connection test successful!",
+    "views.Settings.LightningAddress.viewPlusPerks": "View perks",
     "views.Settings.LightningAddressSettings.title": "Paramètres d'adresse Lightning",
     "views.Settings.LightningAddressSettings.automaticallyAccept": "Acceptez automatiquement les paiements au démarrage",
     "views.Settings.LightningAddressSettings.automaticallyAcceptAttestationLevel": "Niveau d'attestation pour l'acceptation automatique",
@@ -1247,6 +1284,10 @@
     "views.Settings.LightningAddressInfo.invalidAttestationDetails": "Attestations invalides ou confrimants. Appuyez sur pour voir les détails.",
     "views.Settings.LightningAddressInfo.noAttestationDetails": "Aucune attestation de la Nostr trouvée. Le portefeuille de l'expéditeur ne le soutient probablement pas encore.",
     "views.Settings.LightningAddressInfo.learnAboutZaplocker": "En savoir plus sur Zaplocker",
+    "views.LightningAddress.ZeusPayPlus.subscribe": "Purchase annual subscription",
+    "views.LightningAddress.ZeusPayPlus.extend": "Extend subscription",
+    "views.LightningAddress.ZeusPayPlus.subActive": "Subscription Active",
+    "views.LightningAddress.ZeusPayPlus.noActiveSub": "No active subscription",
     "views.Settings.Attestations.title": "Attestations",
     "views.Settings.Attestations.noAttestationsFound": "Aucune attestation trouvée",
     "views.Settings.Attestation.title": "Attestation",
@@ -1303,6 +1344,12 @@
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.apiUrl": "API URL",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.customApiUrl": "URL d'API personnalisée",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.start": "Commencer le balayage",
+    "views.Settings.Ecash.title": "Ecash settings",
+    "views.Settings.Ecash.enableEcash": "Enable Cashu ecash",
+    "views.Settings.Ecash.enableEcash.subtitle1": "Cashu is a Chaumian ecash protocol built for Bitcoin. It's a custodial solution but with better privacy than a traditional account.",
+    "views.Settings.Ecash.enableEcash.subtitle2": "You'll only want to store in Cashu what you can afford to lose, but it can make for a great solution for those who just want to test ZEUS for the first time or don't have enough bitcoin to open a Lightning channel yet.",
+    "views.Settings.Ecash.enableEcash.subtitle3": "ZEUS will periodically prompt you to upgrade to self-custody, once you have enough bitcoin to purchase a Lightning channel.",
+    "views.Settings.Ecash.enableEcash.learnMore": "Learn more about Cashu",
     "views.LspExplanation.text1": "Zeus est un portefeuille Lightning auto-nous. Afin d'envoyer ou de recevoir un paiement Lightning, vous devez ouvrir un canal de paiement Lightning, qui a des frais de configuration.",
     "views.LspExplanation.text2": "Une fois le canal configuré, vous n'aurez à payer des frais de réseau normaux que jusqu'à ce que votre canal épuise sa capacité.",
     "views.LspExplanation.buttonText": "En savoir plus sur la liquidité",
@@ -1386,6 +1433,86 @@
     "views.OnChainAddresses.sortBy.balanceDescending": "Solde (descendant)",
     "views.OnChainAddresses.createAddress": "Créer une adresse",
     "views.OnChainAddresses.changeAddresses": "Adresses de changement",
+    "views.Cashu.ReceiveEcash.title": "Receive Ecash",
+    "views.Cashu.ReceiveEcash.readTokenFromClipboard": "Read token from clipboard",
+    "views.Cashu.CashuInvoice.title": "Cashu Invoice",
+    "views.Cashu.CashuPayment.title": "Cashu Payment",
+    "cashu.mint": "Mint",
+    "cashu.mints": "Mints",
+    "cashu.mintUrl": "Mint URL",
+    "cashu.token": "Cashu token",
+    "cashu.receivedToken": "Received Cashu token",
+    "cashu.sentToken": "Sent Cashu token",
+    "cashu.unspentToken": "Unspent Cashu token",
+    "cashu.tapToConfigure": "No mints found. Tap to configure",
+    "cashu.tapToConfigure.short": "Tap to configure",
+    "cashu.mintToken": "Mint token",
+    "cashu.mintEcashToken": "Mint ecash token",
+    "cashu.errorAddingMint": "Error adding mint",
+    "views.Cashu.AddMint.title": "Add mint",
+    "views.Cashu.AddMint.discover": "Discover mints",
+    "views.Cashu.AddMint.discover.explainer": "These mints were recommended by other Nostr users. Read reviews at bitcoinmints.com. Be careful and do your own research before using a mint.",
+    "views.Cashu.AddMint.reviews": "Read mint reviews",
+    "views.Mints.noMints": "No mints added yet",
+    "views.Cashu.Mint.supportedNuts": "Supported Nuts",
+    "views.Cashu.Mint.removeMint": "Remove mint",
+    "views.Cashu.Mint.selectedMint": "This is your selected mint",
+    "views.Cashu.Mint.setSelected": "Set selected",
+    "views.Cashu.Mint.restoration": "Recovering your Cashu proofs and balances",
+    "views.Cashu.Mint.restorationKeyset": "Restoring keyset",
+    "views.Cashu.Mint.checkForExistingBalances": "Check for existing balances",
+    "views.Cashu.CashuPaymentRequest.sendingFrom": "Sending from",
+    "views.Cashu.CashuPaymentRequest.noBalance": "No ecash balance available. Receive a payment first.",
+    "views.Cashu.CashuPayment.inTransitPayment": "In Transit Cashu Payment",
+    "views.Cashu.CashuPayment.failedPayment": "Failed Cashu Payment",
+    "views.Cashu.CashuToken.proofCount": "Number of proofs",
+    "views.Cashu.CashuToken.notSupported": "This token has a unit that is not supported",
+    "views.Cashu.CashuToken.success": "Successfully imported token",
+    "views.Cashu.CashuToken.meltTokenSelfCustody": "Melt token to self-custody",
+    "views.Cashu.CashuToken.tokenSweep": "Cashu token sweep",
+    "views.Cashu.CashuToken.feeAdjusted": "Fee adjusted",
+    "views.Cashu.LightningAddressInfo.explainer1": "This is a custodial Lightning address tied to your Cashu wallet.",
+    "views.Cashu.LightningAddressInfo.explainer2": "It leverages NUT-20 to lock all incoming payments to your Cashu wallet's pubkey. There is no time period in which you must redeem the funds; they are available for you to pull into your Cashu wallet indefinitely.",
+    "views.Cashu.UnspentTokens.title": "Unspent tokens",
+    "views.Cashu.UnspentTokens.noUnspentTokens": "No unspent tokens",
+    "views.LightningAddress.NWC.explainer1": "This is a self-custodial Lightning address that connects to a remote node using Nostr Wallet Connect (NWC).",
+    "views.LightningAddress.NWC.explainer2": "Invoices are created directly on your node. There is no need to redeem the funds; they are available on your remote node immediately.",
+    "stores.CashuStore.initializingWallet": "Initializing ecash wallet",
+    "stores.CashuStore.startingWallet": "Starting ecash wallet",
+    "stores.CashuStore.alreadyPaid": "Invoice has already been paid.",
+    "stores.CashuStore.alreadySpent": "Token has already been spent.",
+    "stores.CashuStore.pending": "Payment is pending.",
+    "stores.CashuStore.claimError": "Error claming token",
+    "stores.CashuStore.errorMintingToken": "Error minting token",
+    "stores.CashuStore.notEnoughFunds": "Not enough funds to cover payment",
+    "stores.CashuStore.feeExceedsAmt": "Melt fees match or exceed token amount",
+    "cashu.upgradePrompt.title": "Upgrade to Self-Custody?",
+    "cashu.upgradePrompt.messageGeneral": "Your ecash balance is growing! Consider upgrading to a self-custodial Lightning wallet for better security and control over your funds.",
+    "cashu.upgradePrompt.message10k": "You now have enough sats to purchase your first Lightning channel! Upgrade to self-custody to truly own your bitcoin.",
+    "cashu.upgradePrompt.message25k": "Your ecash balance is growing! To ensure you can't lose your funds, consider upgrading to a self-custodial Lightning wallet.",
+    "cashu.upgradePrompt.message50k": "With this balance, it's strongly recommended to move to a self-custodial Lightning wallet. Don't trust, verify!",
+    "cashu.upgradePrompt.message100k": "High balance detected! It's crucial to upgrade to a self-custodial Lightning wallet now to secure your funds.",
+    "cashu.upgradePrompt.purchaseChannel": "Purchase Channel",
+    "cashu.upgradePrompt.learnMore": "Learn About Self-Custody",
+    "zeuspay.intro.explainer1": "ZEUS Pay is a service that give you a Lightning address, like satoshi@zeuspay.com, for receiving payments to your Lightning wallet.",
+    "zeuspay.intro.explainer2": "Below are the kinds of Lightning addresses you can have for your wallet type:",
+    "zeuspay.intro.prosAndCons": "Pros and cons",
+    "zeuspay.intro.prosAndCons.nostrVerification": "Nostr-based recipient verification system",
+    "zeuspay.intro.prosAndCons.redeemInApp": "Payments must be redeemed in the ZEUS app",
+    "zeuspay.intro.prosAndCons.noExpiry": "Unredeemed payments do not expire",
+    "zeuspay.intro.prosAndCons.settledUponPayment": "Payments settle on Lightning at time of payment",
+    "zeuspay.intro.prosAndCons.settledUponRedemption": "Payments settle on Lightning when redeemed in the ZEUS app",
+    "zeuspay.intro.prosAndCons.24hrs": "Payments must be redeemed within 24 hours or the payment is returned to the sender",
+    "zeuspay.intro.prosAndCons.channelRequired": "Requires a channel with the ZEUS LSP, with inbound liquidity",
+    "zeuspay.intro.prosAndCons.automaticallyAccepted": "Payments automatically accepted. No need to redeem manually in the ZEUS app.",
+    "zeuspay.intro.prosAndCons.noLspChannelNeeded": "No need for a channel with the ZEUS LSP",
+    "zeuspay.intro.prosAndCons.remotePlusNwc": "Requires a remote node with Nostr Wallet Connect",
+    "zeuspay.intro.prosAndCons.payPlusSubscription": "Requires a ZEUS Pay+ subscription",
+    "zeuspay.intro.ecash.overview": "Just starting your Lightning journey? The Cashu ecash powered address is a great way to get started. Works well on Nostr.",
+    "zeuspay.intro.zaplocker.overview": "The first-of-its-kind self-custodial Lightning address for mobile wallets.",
+    "zeuspay.intro.nwc.overview": "Connect directly to your remote node using Nostr Wallet Connect.",
+    "zeuspay.enableEcash": "Enable ecash",
+    "zeuspay.getChannel": "Get channel",
     "androidNotification.lndRunningBackground": "LND fonctionne en arrière-plan",
     "androidNotification.shutdown": "Éteindre"
 }
