--- a/locales/hi_IN.json
+++ b/locales/hi_IN.json
@@ -18,6 +18,8 @@
     "general.continueQuestion": "जारी रखें?",
     "general.readOnlyWallet": "केवल पढ़ने योग्य वॉलेट",
     "general.custodialWallet": "कस्टोडियल वॉलेट",
+    "general.selfCustodial": "Self-custodial",
+    "general.custodial": "Custodial",
     "general.show": "दिखाऐं",
     "general.close": "बंद करें",
     "general.hide": "छिपाऐं",
@@ -26,6 +28,7 @@
     "general.goBack": "वापस जाएं",
     "general.lightning": "लाइटनिंग",
     "general.onchain": "ऑन-चेन",
+    "general.cashu": "Cashu",
     "general.activity": "गतिविधि",
     "general.transaction": "लेन-देन",
     "general.confirmed": "पुष्टि की गई",
@@ -96,6 +99,7 @@
     "general.invalid": "अमान्य",
     "general.createdAt": "बनाया गया",
     "general.expiresAt": "समाप्ति",
+    "general.expiresOn": "Expires on",
     "general.id": "आईडी",
     "general.hash": "हैश",
     "general.kind": "प्रकार",
@@ -133,6 +137,15 @@
     "general.unknown": "अज्ञात",
     "general.retry": "पुनः प्रयास करें",
     "general.response": "प्रतिक्रिया",
+    "general.approximately": "Approximately",
+    "general.selfCustody": "Self-custody",
+    "general.ecash": "Ecash",
+    "general.errorConnecting": "Error connecting",
+    "general.bitcoinPayment": "Bitcoin payment",
+    "general.unspent": "Unspent",
+    "general.remote": "रिमोट",
+    "general.getStarted": "Get started",
+    "general.comingSoon": "Coming soon",
     "channel.status.good": "अच्छा",
     "channel.status.stable": "स्थिर",
     "channel.status.unstable": "अस्थिर",
@@ -713,6 +726,13 @@
     "views.ContactInfo.title": "संपर्क जानकारी",
     "views.Tools.title": "उपकरण",
     "views.Tools.developers": "डेवलपर्स",
+    "views.Tools.cashu": "Cashu Tools",
+    "views.Tools.cashu.bumpWalletCounters": "Bump wallet counters",
+    "views.Tools.cashu.bumpWalletCounters.subtitle": "Helpful if your wallet counters get out of sync and you encounter 'Outputs have already been signed before' errors.",
+    "views.Tools.cashu.deleteData": "Delete all Cashu data",
+    "views.Tools.cashu.deleteData.confirmTitle": "Are you sure you want to delete all your Cashu data?",
+    "views.Tools.cashu.deleteData.confirmMessage": "Funds can still be restored by re-adding your mints, but transaction history will be lost.",
+    "stores.CashuStore.dataDeletedMessage": "Your Cashu data has been deleted.",
     "views.Tools.developerTools.title": "डेवलपर उपकरण",
     "views.Tools.developerTools.noItemsExist": "कोई आइटम मौजूद नहीं हैं",
     "views.Settings.title": "सेटिंग्स",
@@ -1015,6 +1035,7 @@
     "views.ActivityFilter.endDate": "अंतिम तिथि",
     "views.ActivityFilter.lightningPayments": "लाइटनिंग भुगतान",
     "views.ActivityFilter.onChainPayments": "ऑन-चेन भुगतान",
+    "views.ActivityFilter.cashuPayments": "Cashu payments",
     "views.ActivityFilter.minimumAmount": "न्यूनतम राशि (सैट्स)",
     "views.ActivityFilter.maximumAmount": "अधिकतम राशि (सैट्स)",
     "views.ActivityFilter.maximumAmountPlaceHolder":"कोई सीमा नहीं",
@@ -1137,6 +1158,7 @@
     "components.ChannelPicker.modal.description.multiple": "इस ऑपरेशन में उपयोग किए जाने वाले चैनल(s) का चयन करें। आपकी गोपनीयता बनाए रखने के लिए आप केवल विशिष्ट चैनल का उपयोग करना चाह सकते हैं।",
     "components.LayerBalances.moreAccounts": "अधिक खाते",
     "components.LayerBalances.moveFundsToLn": "ऑन-चेन फंड को लाइटनिंग पर ले जाएं",
+    "components.LayerBalances.lightningViaEcash": "Lightning via ecash",
     "backends.LND.wsReq.warning": "इस प्रकार के कॉल करने के लिए आपको प्रमाणपत्र सत्यापन सक्षम करना पड़ सकता है",
     "backends.LND.restReq.connectionError": "कनेक्शन त्रुटि",
     "utils.handleAnything.lightningAddressError": "लाइटनिंग पता डेटा प्राप्त करने में त्रुटि",
@@ -1160,6 +1182,8 @@
     "stores.LSPStore.error": "LSP त्रुटि",
     "stores.LSPStore.connectionError": "LSP से कनेक्ट नहीं हो सका। कृपया अपनी LSP सेटिंग्स की जांच करें या बाद में पुनः प्रयास करें।",
     "stores.LightningAddressStore.preimageNotFound": "आपके डिवाइस पर प्री-इमेज नहीं मिला। क्या आपने हाल ही में डिवाइस बदला है?",
+    "stores.LightningAddressStore.Cashu.quoteNotPaid": "Quote not paid",
+    "stores.LightningAddressStore.Cashu.quotePaymentErr": "Error checking for quote payment",
     "error.connectionRefused": "होस्ट तक पहुंच नहीं सका। अपने नोड या उसकी Tor प्रक्रिया को पुनरारंभ करने का प्रयास करें।",
     "error.hostUnreachable": "होस्ट तक पहुंच नहीं सका। अपने नोड या उसकी Tor प्रक्रिया को पुनरारंभ करने का प्रयास करें।",
     "error.nodeConnectError": "नोड से कनेक्ट करने में असमर्थ। कृपया सत्यापित करें कि होस्ट और पोर्ट सही हैं और सेवा चल रही है।",
@@ -1173,6 +1197,7 @@
     "error.failureReasonInsufficientBalance": "अपर्याप्त स्थानीय बैलेंस",
     "error.invalidMacaroon": "अमान्य मैकरून। कृपया जांचें कि आपने इस नोड के लिए सही मैकरून दर्ज किया है।",
     "error.invalidResponse": "सर्वर से अमान्य प्रतिक्रिया डेटा प्राप्त हुआ",
+    "error.serviceConnection": "Error connecting to service. Please try again later.",
     "pos.views.Wallet.PosPane.noOrders": "इस समय कोई ऑर्डर खुला नहीं है। ज़ीउस को भेजने के लिए, ऑर्डर को 'अन्य भुगतान प्रकार' के रूप में चिह्नित करें, जिसमें 'Zeus', 'BTC', या 'Bitcoin' शामिल हो।",
     "pos.views.Wallet.PosPane.noOrdersStandalone": "इस समय कोई ऑर्डर खुला नहीं है",
     "pos.views.Wallet.PosPane.noOrdersPaid": "अभी तक किसी भी ऑर्डर का भुगतान नहीं किया गया है",
@@ -1210,10 +1235,17 @@
     "views.Settings.LightningAddress.chooseHandle": "एक हैंडल चुनें",
     "views.Settings.LightningAddress.zaplockerVerification": "ज़ैपलॉकर सत्यापन",
     "views.Settings.LightningAddress.noPaymentsToRedeem": "रिडीम करने के लिए कोई भुगतान नहीं है। बाद में फिर से जांचें।",
+    "views.Settings.LightningAddress.noNeedToRedeem": "No redeem step required. Payments are sent directly to your wallet.",
     "views.Settings.LightningAddress.statusExplainer1": "यह उन भुगतानों की संख्या है जो आपके ऑफलाइन होने पर भी आपको किए जा सकते हैं।",
     "views.Settings.LightningAddress.statusExplainer2": "आवश्यकता पड़ने पर अधिक भुगतान हैश स्वचालित रूप से सर्वर पर भेजे जाएंगे, ताकि आप भुगतान प्राप्त करना जारी रख सकें।",
     "views.Settings.LightningAddress.generatingPreimages": "प्रीइमेज जेनरेट कर रहा है",
     "views.Settings.LightningAddress.ChangeAddress": "पता बदलें",
+    "views.Settings.LightningAddress.webPortalPos": "Web portal: Point of Sale",
+    "views.Settings.LightningAddress.webPortalPos.enableFiat": "Enable fiat pricing",
+    "views.Settings.LightningAddress.webPortalPos.syncSettings": "Sync settings",
+    "views.Settings.LightningAddress.switchToCashu": "Switch to Cashu Lightning address",
+    "views.Settings.LightningAddress.switchToNWC": "Switch to NWC Lightning address",
+    "views.Settings.LightningAddress.switchToZaplocker": "Switch to Zaplocker Lightning address",
     "views.Settings.LightningAddress.nostrKeys.changeWarning": "चेतावनी: आपकी नोस्टर की बदलने से आपके लंबित भुगतान हट जाएंगे। कृपया नई की सबमिट करने से पहले अपने लंबित भुगतान रिडीम करें।",
     "views.Settings.LightningAddress.explainer1": "लाइटनिंग पते के साथ शुरू करने के लिए, आपके पास पहले ज़ीउस LSP से इनबाउंड लिक्विडिटी के साथ एक लाइटनिंग चैनल होना चाहिए।",
     "views.Settings.LightningAddress.explainer2": "ऐसा करने का सबसे आसान तरीका 0-कन्फ चैनल खरीदना है। बस एक इनवॉइस जेनरेट करें और किसी अन्य लाइटनिंग वॉलेट से खुद को भुगतान करें।",
@@ -1221,6 +1253,11 @@
     "views.Settings.LightningAddress.get0ConfChan": "0-कन्फ चैनल प्राप्त करें",
     "views.Settings.LightningAddress.getStandardChan": "स्टैंडर्ड चैनल प्राप्त करें",
     "views.Settings.LightningAddress.generateNew": "नए प्री-इमेज जेनरेट करें",
+    "views.Settings.LightningAddress.upgrade": "Upgrade to ZEUS Pay+",
+    "views.Settings.LightningAddress.changeConnectionString": "Change connection string",
+    "views.Settings.LightningAddress.testConnectionString": "Test connection string",
+    "views.Settings.LightningAddress.connectionTestSuccess": "Connection test successful!",
+    "views.Settings.LightningAddress.viewPlusPerks": "View perks",
     "views.Settings.LightningAddressSettings.title": "लाइटनिंग पता सेटिंग्स",
     "views.Settings.LightningAddressSettings.automaticallyAccept": "स्टार्टअप पर स्वचालित रूप से भुगतान स्वीकार करें",
     "views.Settings.LightningAddressSettings.automaticallyAcceptAttestationLevel": "स्वचालित स्वीकृति के लिए प्रमाणन स्तर",
@@ -1247,6 +1284,10 @@
     "views.Settings.LightningAddressInfo.invalidAttestationDetails": "अमान्य या विरोधाभासी प्रमाणन। विवरण देखने के लिए दबाएं।",
     "views.Settings.LightningAddressInfo.noAttestationDetails": "कोई नोस्टर प्रमाणन नहीं मिला। भेजने वाले का वॉलेट संभवतः अभी तक इसका समर्थन नहीं करता है।",
     "views.Settings.LightningAddressInfo.learnAboutZaplocker": "ज़ैपलॉकर के बारे में अधिक जानें",
+    "views.LightningAddress.ZeusPayPlus.subscribe": "Purchase annual subscription",
+    "views.LightningAddress.ZeusPayPlus.extend": "Extend subscription",
+    "views.LightningAddress.ZeusPayPlus.subActive": "Subscription Active",
+    "views.LightningAddress.ZeusPayPlus.noActiveSub": "No active subscription",
     "views.Settings.Attestations.title": "प्रमाणन",
     "views.Settings.Attestations.noAttestationsFound": "कोई प्रमाणन नहीं मिला",
     "views.Settings.Attestation.title": "प्रमाणन",
@@ -1303,6 +1344,12 @@
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.apiUrl": "API URL",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.customApiUrl": "कस्टम API URL",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.start": "शुरू करें",
+    "views.Settings.Ecash.title": "Ecash settings",
+    "views.Settings.Ecash.enableEcash": "Enable Cashu ecash",
+    "views.Settings.Ecash.enableEcash.subtitle1": "Cashu is a Chaumian ecash protocol built for Bitcoin. It's a custodial solution but with better privacy than a traditional account.",
+    "views.Settings.Ecash.enableEcash.subtitle2": "You'll only want to store in Cashu what you can afford to lose, but it can make for a great solution for those who just want to test ZEUS for the first time or don't have enough bitcoin to open a Lightning channel yet.",
+    "views.Settings.Ecash.enableEcash.subtitle3": "ZEUS will periodically prompt you to upgrade to self-custody, once you have enough bitcoin to purchase a Lightning channel.",
+    "views.Settings.Ecash.enableEcash.learnMore": "Learn more about Cashu",
     "views.LspExplanation.text1": "लाइटनिंग सर्विस प्रोवाइडर्स (LSPs) आपको लाइटनिंग नेटवर्क से जोड़ने में मदद करते हैं",
     "views.LspExplanation.text2": "ज़ीउस LSP आपके लिए प्रारंभिक इनबाउंड चैनल बनाने के लिए एक छोटी फीस लेगा, जो आपको तुरंत भुगतान प्राप्त करने की अनुमति देगा।",
     "views.LspExplanation.buttonText": "LSP के बारे में अधिक जानें",
@@ -1386,6 +1433,86 @@
     "views.OnChainAddresses.sortBy.balanceDescending": "बैलेंस - अवरोही",
     "views.OnChainAddresses.createAddress": "पता बनाएं",
     "views.OnChainAddresses.changeAddresses": "परिवर्तन पते",
+    "views.Cashu.ReceiveEcash.title": "Receive Ecash",
+    "views.Cashu.ReceiveEcash.readTokenFromClipboard": "Read token from clipboard",
+    "views.Cashu.CashuInvoice.title": "Cashu Invoice",
+    "views.Cashu.CashuPayment.title": "Cashu Payment",
+    "cashu.mint": "मिंट",
+    "cashu.mints": "Mints",
+    "cashu.mintUrl": "Mint URL",
+    "cashu.token": "Cashu token",
+    "cashu.receivedToken": "Received Cashu token",
+    "cashu.sentToken": "Sent Cashu token",
+    "cashu.unspentToken": "Unspent Cashu token",
+    "cashu.tapToConfigure": "No mints found. Tap to configure",
+    "cashu.tapToConfigure.short": "Tap to configure",
+    "cashu.mintToken": "Mint token",
+    "cashu.mintEcashToken": "Mint ecash token",
+    "cashu.errorAddingMint": "Error adding mint",
+    "views.Cashu.AddMint.title": "Add mint",
+    "views.Cashu.AddMint.discover": "Discover mints",
+    "views.Cashu.AddMint.discover.explainer": "These mints were recommended by other Nostr users. Read reviews at bitcoinmints.com. Be careful and do your own research before using a mint.",
+    "views.Cashu.AddMint.reviews": "Read mint reviews",
+    "views.Mints.noMints": "No mints added yet",
+    "views.Cashu.Mint.supportedNuts": "Supported Nuts",
+    "views.Cashu.Mint.removeMint": "Remove mint",
+    "views.Cashu.Mint.selectedMint": "This is your selected mint",
+    "views.Cashu.Mint.setSelected": "Set selected",
+    "views.Cashu.Mint.restoration": "Recovering your Cashu proofs and balances",
+    "views.Cashu.Mint.restorationKeyset": "Restoring keyset",
+    "views.Cashu.Mint.checkForExistingBalances": "Check for existing balances",
+    "views.Cashu.CashuPaymentRequest.sendingFrom": "Sending from",
+    "views.Cashu.CashuPaymentRequest.noBalance": "No ecash balance available. Receive a payment first.",
+    "views.Cashu.CashuPayment.inTransitPayment": "In Transit Cashu Payment",
+    "views.Cashu.CashuPayment.failedPayment": "Failed Cashu Payment",
+    "views.Cashu.CashuToken.proofCount": "Number of proofs",
+    "views.Cashu.CashuToken.notSupported": "This token has a unit that is not supported",
+    "views.Cashu.CashuToken.success": "Successfully imported token",
+    "views.Cashu.CashuToken.meltTokenSelfCustody": "Melt token to self-custody",
+    "views.Cashu.CashuToken.tokenSweep": "Cashu token sweep",
+    "views.Cashu.CashuToken.feeAdjusted": "Fee adjusted",
+    "views.Cashu.LightningAddressInfo.explainer1": "This is a custodial Lightning address tied to your Cashu wallet.",
+    "views.Cashu.LightningAddressInfo.explainer2": "It leverages NUT-20 to lock all incoming payments to your Cashu wallet's pubkey. There is no time period in which you must redeem the funds; they are available for you to pull into your Cashu wallet indefinitely.",
+    "views.Cashu.UnspentTokens.title": "Unspent tokens",
+    "views.Cashu.UnspentTokens.noUnspentTokens": "No unspent tokens",
+    "views.LightningAddress.NWC.explainer1": "This is a self-custodial Lightning address that connects to a remote node using Nostr Wallet Connect (NWC).",
+    "views.LightningAddress.NWC.explainer2": "Invoices are created directly on your node. There is no need to redeem the funds; they are available on your remote node immediately.",
+    "stores.CashuStore.initializingWallet": "Initializing ecash wallet",
+    "stores.CashuStore.startingWallet": "Starting ecash wallet",
+    "stores.CashuStore.alreadyPaid": "Invoice has already been paid.",
+    "stores.CashuStore.alreadySpent": "Token has already been spent.",
+    "stores.CashuStore.pending": "Payment is pending.",
+    "stores.CashuStore.claimError": "Error claming token",
+    "stores.CashuStore.errorMintingToken": "Error minting token",
+    "stores.CashuStore.notEnoughFunds": "Not enough funds to cover payment",
+    "stores.CashuStore.feeExceedsAmt": "Melt fees match or exceed token amount",
+    "cashu.upgradePrompt.title": "Upgrade to Self-Custody?",
+    "cashu.upgradePrompt.messageGeneral": "Your ecash balance is growing! Consider upgrading to a self-custodial Lightning wallet for better security and control over your funds.",
+    "cashu.upgradePrompt.message10k": "You now have enough sats to purchase your first Lightning channel! Upgrade to self-custody to truly own your bitcoin.",
+    "cashu.upgradePrompt.message25k": "Your ecash balance is growing! To ensure you can't lose your funds, consider upgrading to a self-custodial Lightning wallet.",
+    "cashu.upgradePrompt.message50k": "With this balance, it's strongly recommended to move to a self-custodial Lightning wallet. Don't trust, verify!",
+    "cashu.upgradePrompt.message100k": "High balance detected! It's crucial to upgrade to a self-custodial Lightning wallet now to secure your funds.",
+    "cashu.upgradePrompt.purchaseChannel": "Purchase Channel",
+    "cashu.upgradePrompt.learnMore": "Learn About Self-Custody",
+    "zeuspay.intro.explainer1": "ZEUS Pay is a service that give you a Lightning address, like satoshi@zeuspay.com, for receiving payments to your Lightning wallet.",
+    "zeuspay.intro.explainer2": "Below are the kinds of Lightning addresses you can have for your wallet type:",
+    "zeuspay.intro.prosAndCons": "Pros and cons",
+    "zeuspay.intro.prosAndCons.nostrVerification": "Nostr-based recipient verification system",
+    "zeuspay.intro.prosAndCons.redeemInApp": "Payments must be redeemed in the ZEUS app",
+    "zeuspay.intro.prosAndCons.noExpiry": "Unredeemed payments do not expire",
+    "zeuspay.intro.prosAndCons.settledUponPayment": "Payments settle on Lightning at time of payment",
+    "zeuspay.intro.prosAndCons.settledUponRedemption": "Payments settle on Lightning when redeemed in the ZEUS app",
+    "zeuspay.intro.prosAndCons.24hrs": "Payments must be redeemed within 24 hours or the payment is returned to the sender",
+    "zeuspay.intro.prosAndCons.channelRequired": "Requires a channel with the ZEUS LSP, with inbound liquidity",
+    "zeuspay.intro.prosAndCons.automaticallyAccepted": "Payments automatically accepted. No need to redeem manually in the ZEUS app.",
+    "zeuspay.intro.prosAndCons.noLspChannelNeeded": "No need for a channel with the ZEUS LSP",
+    "zeuspay.intro.prosAndCons.remotePlusNwc": "Requires a remote node with Nostr Wallet Connect",
+    "zeuspay.intro.prosAndCons.payPlusSubscription": "Requires a ZEUS Pay+ subscription",
+    "zeuspay.intro.ecash.overview": "Just starting your Lightning journey? The Cashu ecash powered address is a great way to get started. Works well on Nostr.",
+    "zeuspay.intro.zaplocker.overview": "The first-of-its-kind self-custodial Lightning address for mobile wallets.",
+    "zeuspay.intro.nwc.overview": "Connect directly to your remote node using Nostr Wallet Connect.",
+    "zeuspay.enableEcash": "Enable ecash",
+    "zeuspay.getChannel": "Get channel",
     "androidNotification.lndRunningBackground": "LND पृष्ठभूमि में चल रहा है",
     "androidNotification.shutdown": "बंद करें"
 }
