--- a/locales/it.json
+++ b/locales/it.json
@@ -18,6 +18,8 @@
     "general.continueQuestion": "Continuare?",
     "general.readOnlyWallet": "Portafoglio di sola lettura",
     "general.custodialWallet": "Portafoglio custodiale",
+    "general.selfCustodial": "Self-custodial",
+    "general.custodial": "Custodial",
     "general.show": "Mostra",
     "general.close": "Vicino",
     "general.hide": "Nascondi",
@@ -26,6 +28,7 @@
     "general.goBack": "Vai Indietro",
     "general.lightning": "Lightning",
     "general.onchain": "On-chain",
+    "general.cashu": "Cashu",
     "general.activity": "Attività",
     "general.transaction": "Transazione",
     "general.confirmed": "Confermato",
@@ -96,6 +99,7 @@
     "general.invalid": "Non valido",
     "general.createdAt": "Creato a",
     "general.expiresAt": "Scade alle",
+    "general.expiresOn": "Expires on",
     "general.id": "ID",
     "general.hash": "Hash",
     "general.kind": "Tipo",
@@ -133,6 +137,15 @@
     "general.unknown": "Sconosciuto",
     "general.retry": "Riprova",
     "general.response": "Risposta",
+    "general.approximately": "Approximately",
+    "general.selfCustody": "Self-custody",
+    "general.ecash": "Ecash",
+    "general.errorConnecting": "Error connecting",
+    "general.bitcoinPayment": "Bitcoin payment",
+    "general.unspent": "Unspent",
+    "general.remote": "Remoto",
+    "general.getStarted": "Get started",
+    "general.comingSoon": "Coming soon",
     "channel.status.good": "Bene",
     "channel.status.stable": "Stabile",
     "channel.status.unstable": "Instabile",
@@ -713,6 +726,13 @@
     "views.ContactInfo.title": "Informazioni di contatto",
     "views.Tools.title": "Utensili",
     "views.Tools.developers": "Sviluppatori ",
+    "views.Tools.cashu": "Cashu Tools",
+    "views.Tools.cashu.bumpWalletCounters": "Bump wallet counters",
+    "views.Tools.cashu.bumpWalletCounters.subtitle": "Helpful if your wallet counters get out of sync and you encounter 'Outputs have already been signed before' errors.",
+    "views.Tools.cashu.deleteData": "Delete all Cashu data",
+    "views.Tools.cashu.deleteData.confirmTitle": "Are you sure you want to delete all your Cashu data?",
+    "views.Tools.cashu.deleteData.confirmMessage": "Funds can still be restored by re-adding your mints, but transaction history will be lost.",
+    "stores.CashuStore.dataDeletedMessage": "Your Cashu data has been deleted.",
     "views.Tools.developerTools.title": "Strumenti per sviluppatori",
     "views.Tools.developerTools.noItemsExist": "Non esistono elementi",
     "views.Settings.title": "Impostazioni",
@@ -1015,6 +1035,7 @@
     "views.ActivityFilter.endDate": "Data di fine",
     "views.ActivityFilter.lightningPayments": "Pagamenti di Lightning",
     "views.ActivityFilter.onChainPayments": "Pagamenti in catena",
+    "views.ActivityFilter.cashuPayments": "Cashu payments",
     "views.ActivityFilter.minimumAmount": "Importo minimo (sats)",
     "views.ActivityFilter.maximumAmount": "Quantità massima (sats)",
     "views.ActivityFilter.maximumAmountPlaceHolder":"Nessun limite",
@@ -1137,6 +1158,7 @@
     "components.ChannelPicker.modal.description.multiple": "Selezionare il/i canale(i) da utilizzare in questa operazione. Potresti voler utilizzare solo canali specifici per preservare la tua privacy.",
     "components.LayerBalances.moreAccounts": "Più conti",
     "components.LayerBalances.moveFundsToLn": "Sposta i fondi on-chain su Lightning",
+    "components.LayerBalances.lightningViaEcash": "Lightning via ecash",
     "backends.LND.wsReq.warning": "Potrebbe essere necessario abilitare la verifica del certificato per effettuare questo tipo di chiamate",
     "backends.LND.restReq.connectionError": "Errore di connessione",
     "utils.handleAnything.lightningAddressError": "Errore che recupera i dati dell'indirizzo Lightning",
@@ -1160,6 +1182,8 @@
     "stores.LSPStore.error": "Errore LSP",
     "stores.LSPStore.connectionError": "Impossibile connettersi a LSP. Controlla le impostazioni LSP o riprova più tardi.",
     "stores.LightningAddressStore.preimageNotFound": "Pre-immagine non trovata sul tuo dispositivo. Hai cambiato dispositivo di recente?",
+    "stores.LightningAddressStore.Cashu.quoteNotPaid": "Quote not paid",
+    "stores.LightningAddressStore.Cashu.quotePaymentErr": "Error checking for quote payment",
     "error.connectionRefused": "Ospita irraggiungibile. Prova a riavviare il nodo o il suo processo Tor.",
     "error.hostUnreachable": "Ospita irraggiungibile. Prova a riavviare il nodo o il suo processo Tor.",
     "error.nodeConnectError": "Impossibile connettersi al nodo. Verificare che l'host e la porta siano corretti e che il servizio sia in esecuzione.",
@@ -1173,6 +1197,7 @@
     "error.failureReasonInsufficientBalance": "Equilibrio locale insufficiente",
     "error.invalidMacaroon": "Macaroon non valido. Controlla di aver inserito il macaroon corretto per questo nodo.",
     "error.invalidResponse": "Ricevuti dati di risposta non validi dal server",
+    "error.serviceConnection": "Error connecting to service. Please try again later.",
     "pos.views.Wallet.PosPane.noOrders": "Nessun ordine aperto al momento. Per inviare a Zeus, contrassegnare l'ordine come \"altro tipo di pagamento\" con una nota che include \"Zeus\", \"BTC\" o \"Bitcoin\"",
     "pos.views.Wallet.PosPane.noOrdersStandalone": "Nessun ordine aperto al momento",
     "pos.views.Wallet.PosPane.noOrdersPaid": "Nessun ordine è stato ancora pagato",
@@ -1210,10 +1235,17 @@
     "views.Settings.LightningAddress.chooseHandle": "Scegli un alias",
     "views.Settings.LightningAddress.zaplockerVerification": "Verifica di Zaplocker",
     "views.Settings.LightningAddress.noPaymentsToRedeem": "Nessun pagamento per riscattare. Controlla più tardi.",
+    "views.Settings.LightningAddress.noNeedToRedeem": "No redeem step required. Payments are sent directly to your wallet.",
     "views.Settings.LightningAddress.statusExplainer1": "Questo è il numero di pagamenti che possono essere effettuati mentre sei offline.",
     "views.Settings.LightningAddress.statusExplainer2": "Più hash di pagamento verranno inviati automaticamente al server quando richiesto, in modo da poter continuare a ricevere pagamenti.",
     "views.Settings.LightningAddress.generatingPreimages": "Generare preimages",
     "views.Settings.LightningAddress.ChangeAddress": "Indirizzi di cambiamento",
+    "views.Settings.LightningAddress.webPortalPos": "Web portal: Point of Sale",
+    "views.Settings.LightningAddress.webPortalPos.enableFiat": "Enable fiat pricing",
+    "views.Settings.LightningAddress.webPortalPos.syncSettings": "Sync settings",
+    "views.Settings.LightningAddress.switchToCashu": "Switch to Cashu Lightning address",
+    "views.Settings.LightningAddress.switchToNWC": "Switch to NWC Lightning address",
+    "views.Settings.LightningAddress.switchToZaplocker": "Switch to Zaplocker Lightning address",
     "views.Settings.LightningAddress.nostrKeys.changeWarning": "ATTENZIONE: la modifica delle chiavi NOSTR eliminerà i pagamenti in sospeso. Si prega di riscattare i pagamenti in sospeso prima di inviare nuove chiavi.",
     "views.Settings.LightningAddress.explainer1": "Per iniziare con un indirizzo lightning, devi prima disporre di un canale lightning dall'LSP ZEUS con liquidità in entrata.",
     "views.Settings.LightningAddress.explainer2": "Il modo più semplice per farlo è acquistare un canale 0-conf. Basta generare una fattura e pagarti da un altro lightning wallet.",
@@ -1221,6 +1253,11 @@
     "views.Settings.LightningAddress.get0ConfChan": "Ottieni il canale 0-conf",
     "views.Settings.LightningAddress.getStandardChan": "Ottieni canale standard",
     "views.Settings.LightningAddress.generateNew": "Generare nuove pre-immagini",
+    "views.Settings.LightningAddress.upgrade": "Upgrade to ZEUS Pay+",
+    "views.Settings.LightningAddress.changeConnectionString": "Change connection string",
+    "views.Settings.LightningAddress.testConnectionString": "Test connection string",
+    "views.Settings.LightningAddress.connectionTestSuccess": "Connection test successful!",
+    "views.Settings.LightningAddress.viewPlusPerks": "View perks",
     "views.Settings.LightningAddressSettings.title": "Impostazioni dell'indirizzo Lightning",
     "views.Settings.LightningAddressSettings.automaticallyAccept": "Accetta automaticamente i pagamenti all'avvio",
     "views.Settings.LightningAddressSettings.automaticallyAcceptAttestationLevel": "Livello di attestazione per l'accettazione automatica",
@@ -1247,6 +1284,10 @@
     "views.Settings.LightningAddressInfo.invalidAttestationDetails": "Attestazioni non valide o contrastanti. Premere per vedere i dettagli.",
     "views.Settings.LightningAddressInfo.noAttestationDetails": "Nessun attestazione NOSTR trovata. Il portafoglio del mittente probabilmente non lo supporta ancora.",
     "views.Settings.LightningAddressInfo.learnAboutZaplocker": "Ulteriori informazioni su Zaplocker",
+    "views.LightningAddress.ZeusPayPlus.subscribe": "Purchase annual subscription",
+    "views.LightningAddress.ZeusPayPlus.extend": "Extend subscription",
+    "views.LightningAddress.ZeusPayPlus.subActive": "Subscription Active",
+    "views.LightningAddress.ZeusPayPlus.noActiveSub": "No active subscription",
     "views.Settings.Attestations.title": "Attestazioni",
     "views.Settings.Attestations.noAttestationsFound": "Nessun attestazione trovata",
     "views.Settings.Attestation.title": "Attestazione",
@@ -1303,6 +1344,12 @@
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.apiUrl": "API URL",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.customApiUrl": "URL API personalizzato",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.start": "Inizia la spazzata",
+    "views.Settings.Ecash.title": "Ecash settings",
+    "views.Settings.Ecash.enableEcash": "Enable Cashu ecash",
+    "views.Settings.Ecash.enableEcash.subtitle1": "Cashu is a Chaumian ecash protocol built for Bitcoin. It's a custodial solution but with better privacy than a traditional account.",
+    "views.Settings.Ecash.enableEcash.subtitle2": "You'll only want to store in Cashu what you can afford to lose, but it can make for a great solution for those who just want to test ZEUS for the first time or don't have enough bitcoin to open a Lightning channel yet.",
+    "views.Settings.Ecash.enableEcash.subtitle3": "ZEUS will periodically prompt you to upgrade to self-custody, once you have enough bitcoin to purchase a Lightning channel.",
+    "views.Settings.Ecash.enableEcash.learnMore": "Learn more about Cashu",
     "views.LspExplanation.text1": "Zeus è un portafoglio di fulmini autocustodiali. Per inviare o ricevere un pagamento Lightning, è necessario aprire un canale di pagamento Lightning, che ha una commissione di configurazione.",
     "views.LspExplanation.text2": "Una volta impostato il canale, dovrai solo pagare le normali commissioni di rete fino a quando il canale non esaurisce la sua capacità.",
     "views.LspExplanation.buttonText": "Ulteriori informazioni sulla liquidità",
@@ -1386,6 +1433,86 @@
     "views.OnChainAddresses.sortBy.balanceDescending": "Bilancia (discendente)",
     "views.OnChainAddresses.createAddress": "Crea indirizzo",
     "views.OnChainAddresses.changeAddresses": "Indirizzi di cambiamento",
+    "views.Cashu.ReceiveEcash.title": "Receive Ecash",
+    "views.Cashu.ReceiveEcash.readTokenFromClipboard": "Read token from clipboard",
+    "views.Cashu.CashuInvoice.title": "Cashu Invoice",
+    "views.Cashu.CashuPayment.title": "Cashu Payment",
+    "cashu.mint": "Mint",
+    "cashu.mints": "Mints",
+    "cashu.mintUrl": "Mint URL",
+    "cashu.token": "Cashu token",
+    "cashu.receivedToken": "Received Cashu token",
+    "cashu.sentToken": "Sent Cashu token",
+    "cashu.unspentToken": "Unspent Cashu token",
+    "cashu.tapToConfigure": "No mints found. Tap to configure",
+    "cashu.tapToConfigure.short": "Tap to configure",
+    "cashu.mintToken": "Mint token",
+    "cashu.mintEcashToken": "Mint ecash token",
+    "cashu.errorAddingMint": "Error adding mint",
+    "views.Cashu.AddMint.title": "Add mint",
+    "views.Cashu.AddMint.discover": "Discover mints",
+    "views.Cashu.AddMint.discover.explainer": "These mints were recommended by other Nostr users. Read reviews at bitcoinmints.com. Be careful and do your own research before using a mint.",
+    "views.Cashu.AddMint.reviews": "Read mint reviews",
+    "views.Mints.noMints": "No mints added yet",
+    "views.Cashu.Mint.supportedNuts": "Supported Nuts",
+    "views.Cashu.Mint.removeMint": "Remove mint",
+    "views.Cashu.Mint.selectedMint": "This is your selected mint",
+    "views.Cashu.Mint.setSelected": "Set selected",
+    "views.Cashu.Mint.restoration": "Recovering your Cashu proofs and balances",
+    "views.Cashu.Mint.restorationKeyset": "Restoring keyset",
+    "views.Cashu.Mint.checkForExistingBalances": "Check for existing balances",
+    "views.Cashu.CashuPaymentRequest.sendingFrom": "Sending from",
+    "views.Cashu.CashuPaymentRequest.noBalance": "No ecash balance available. Receive a payment first.",
+    "views.Cashu.CashuPayment.inTransitPayment": "In Transit Cashu Payment",
+    "views.Cashu.CashuPayment.failedPayment": "Failed Cashu Payment",
+    "views.Cashu.CashuToken.proofCount": "Number of proofs",
+    "views.Cashu.CashuToken.notSupported": "This token has a unit that is not supported",
+    "views.Cashu.CashuToken.success": "Successfully imported token",
+    "views.Cashu.CashuToken.meltTokenSelfCustody": "Melt token to self-custody",
+    "views.Cashu.CashuToken.tokenSweep": "Cashu token sweep",
+    "views.Cashu.CashuToken.feeAdjusted": "Fee adjusted",
+    "views.Cashu.LightningAddressInfo.explainer1": "This is a custodial Lightning address tied to your Cashu wallet.",
+    "views.Cashu.LightningAddressInfo.explainer2": "It leverages NUT-20 to lock all incoming payments to your Cashu wallet's pubkey. There is no time period in which you must redeem the funds; they are available for you to pull into your Cashu wallet indefinitely.",
+    "views.Cashu.UnspentTokens.title": "Unspent tokens",
+    "views.Cashu.UnspentTokens.noUnspentTokens": "No unspent tokens",
+    "views.LightningAddress.NWC.explainer1": "This is a self-custodial Lightning address that connects to a remote node using Nostr Wallet Connect (NWC).",
+    "views.LightningAddress.NWC.explainer2": "Invoices are created directly on your node. There is no need to redeem the funds; they are available on your remote node immediately.",
+    "stores.CashuStore.initializingWallet": "Initializing ecash wallet",
+    "stores.CashuStore.startingWallet": "Starting ecash wallet",
+    "stores.CashuStore.alreadyPaid": "Invoice has already been paid.",
+    "stores.CashuStore.alreadySpent": "Token has already been spent.",
+    "stores.CashuStore.pending": "Payment is pending.",
+    "stores.CashuStore.claimError": "Error claming token",
+    "stores.CashuStore.errorMintingToken": "Error minting token",
+    "stores.CashuStore.notEnoughFunds": "Not enough funds to cover payment",
+    "stores.CashuStore.feeExceedsAmt": "Melt fees match or exceed token amount",
+    "cashu.upgradePrompt.title": "Upgrade to Self-Custody?",
+    "cashu.upgradePrompt.messageGeneral": "Your ecash balance is growing! Consider upgrading to a self-custodial Lightning wallet for better security and control over your funds.",
+    "cashu.upgradePrompt.message10k": "You now have enough sats to purchase your first Lightning channel! Upgrade to self-custody to truly own your bitcoin.",
+    "cashu.upgradePrompt.message25k": "Your ecash balance is growing! To ensure you can't lose your funds, consider upgrading to a self-custodial Lightning wallet.",
+    "cashu.upgradePrompt.message50k": "With this balance, it's strongly recommended to move to a self-custodial Lightning wallet. Don't trust, verify!",
+    "cashu.upgradePrompt.message100k": "High balance detected! It's crucial to upgrade to a self-custodial Lightning wallet now to secure your funds.",
+    "cashu.upgradePrompt.purchaseChannel": "Purchase Channel",
+    "cashu.upgradePrompt.learnMore": "Learn About Self-Custody",
+    "zeuspay.intro.explainer1": "ZEUS Pay is a service that give you a Lightning address, like satoshi@zeuspay.com, for receiving payments to your Lightning wallet.",
+    "zeuspay.intro.explainer2": "Below are the kinds of Lightning addresses you can have for your wallet type:",
+    "zeuspay.intro.prosAndCons": "Pros and cons",
+    "zeuspay.intro.prosAndCons.nostrVerification": "Nostr-based recipient verification system",
+    "zeuspay.intro.prosAndCons.redeemInApp": "Payments must be redeemed in the ZEUS app",
+    "zeuspay.intro.prosAndCons.noExpiry": "Unredeemed payments do not expire",
+    "zeuspay.intro.prosAndCons.settledUponPayment": "Payments settle on Lightning at time of payment",
+    "zeuspay.intro.prosAndCons.settledUponRedemption": "Payments settle on Lightning when redeemed in the ZEUS app",
+    "zeuspay.intro.prosAndCons.24hrs": "Payments must be redeemed within 24 hours or the payment is returned to the sender",
+    "zeuspay.intro.prosAndCons.channelRequired": "Requires a channel with the ZEUS LSP, with inbound liquidity",
+    "zeuspay.intro.prosAndCons.automaticallyAccepted": "Payments automatically accepted. No need to redeem manually in the ZEUS app.",
+    "zeuspay.intro.prosAndCons.noLspChannelNeeded": "No need for a channel with the ZEUS LSP",
+    "zeuspay.intro.prosAndCons.remotePlusNwc": "Requires a remote node with Nostr Wallet Connect",
+    "zeuspay.intro.prosAndCons.payPlusSubscription": "Requires a ZEUS Pay+ subscription",
+    "zeuspay.intro.ecash.overview": "Just starting your Lightning journey? The Cashu ecash powered address is a great way to get started. Works well on Nostr.",
+    "zeuspay.intro.zaplocker.overview": "The first-of-its-kind self-custodial Lightning address for mobile wallets.",
+    "zeuspay.intro.nwc.overview": "Connect directly to your remote node using Nostr Wallet Connect.",
+    "zeuspay.enableEcash": "Enable ecash",
+    "zeuspay.getChannel": "Get channel",
     "androidNotification.lndRunningBackground": "LND è in esecuzione in background",
     "androidNotification.shutdown": "Fermare"
 }
