--- a/locales/ko.json
+++ b/locales/ko.json
@@ -18,6 +18,8 @@
     "general.continueQuestion": "계속?",
     "general.readOnlyWallet": "읽기 전용 지갑",
     "general.custodialWallet": "수탁형 지갑",
+    "general.selfCustodial": "Self-custodial",
+    "general.custodial": "Custodial",
     "general.show": "보이기",
     "general.close": "닫기",
     "general.hide": "숨기기",
@@ -26,6 +28,7 @@
     "general.goBack": "뒤로",
     "general.lightning": "라이트닝",
     "general.onchain": "온체인",
+    "general.cashu": "Cashu",
     "general.activity": "활동",
     "general.transaction": "트랜잭션",
     "general.confirmed": "승인됨",
@@ -96,6 +99,7 @@
     "general.invalid": "유효하지 않음",
     "general.createdAt": "생성 시기",
     "general.expiresAt": "만료일",
+    "general.expiresOn": "Expires on",
     "general.id": "ID",
     "general.hash": "해쉬값",
     "general.kind": "같은 종류",
@@ -133,6 +137,15 @@
     "general.unknown": "알 수 없음",
     "general.retry": "재시도",
     "general.response": "응답",
+    "general.approximately": "Approximately",
+    "general.selfCustody": "Self-custody",
+    "general.ecash": "Ecash",
+    "general.errorConnecting": "Error connecting",
+    "general.bitcoinPayment": "Bitcoin payment",
+    "general.unspent": "Unspent",
+    "general.remote": "원격",
+    "general.getStarted": "시작하기",
+    "general.comingSoon": "Coming soon",
     "channel.status.good": "좋음",
     "channel.status.stable": "안정",
     "channel.status.unstable": "불안정",
@@ -713,6 +726,13 @@
     "views.ContactInfo.title": "연락처 정보",
     "views.Tools.title": "도구",
     "views.Tools.developers": "개발자",
+    "views.Tools.cashu": "Cashu Tools",
+    "views.Tools.cashu.bumpWalletCounters": "Bump wallet counters",
+    "views.Tools.cashu.bumpWalletCounters.subtitle": "Helpful if your wallet counters get out of sync and you encounter 'Outputs have already been signed before' errors.",
+    "views.Tools.cashu.deleteData": "Delete all Cashu data",
+    "views.Tools.cashu.deleteData.confirmTitle": "Are you sure you want to delete all your Cashu data?",
+    "views.Tools.cashu.deleteData.confirmMessage": "Funds can still be restored by re-adding your mints, but transaction history will be lost.",
+    "stores.CashuStore.dataDeletedMessage": "Your Cashu data has been deleted.",
     "views.Tools.developerTools.title": "개발자 도구",
     "views.Tools.developerTools.noItemsExist": "항목이 없습니다.",
     "views.Settings.title": "설정",
@@ -1015,6 +1035,7 @@
     "views.ActivityFilter.endDate": "종료일",
     "views.ActivityFilter.lightningPayments": "라이트닝 결제",
     "views.ActivityFilter.onChainPayments": "온체인 결제",
+    "views.ActivityFilter.cashuPayments": "Cashu payments",
     "views.ActivityFilter.minimumAmount": "최소 금액 (사토시)",
     "views.ActivityFilter.maximumAmount": "최대 금액 (sats)",
     "views.ActivityFilter.maximumAmountPlaceHolder":"제한 없음",
@@ -1137,6 +1158,7 @@
     "components.ChannelPicker.modal.description.multiple": "이 작업에 사용할 채널을 선택합니다. 개인정보 보호를 위해 특정 채널만 사용하도록 설정할 수 있습니다.",
     "components.LayerBalances.moreAccounts": "추가 계정",
     "components.LayerBalances.moveFundsToLn": "온체인 자금을 라이트닝으로 이동",
+    "components.LayerBalances.lightningViaEcash": "Lightning via ecash",
     "backends.LND.wsReq.warning": "이러한 종류의 통화를 하려면 인증서 확인을 사용 설정해야 합니다.",
     "backends.LND.restReq.connectionError": "연결 오류",
     "utils.handleAnything.lightningAddressError": "라이트닝 주소 데이터 가져오기 오류",
@@ -1160,6 +1182,8 @@
     "stores.LSPStore.error": "LSP 오류",
     "stores.LSPStore.connectionError": "LSP에 연결할 수 없습니다. LSP 설정을 확인하시거나, 나중에 다시 시도해 보세요.",
     "stores.LightningAddressStore.preimageNotFound": "기기에서 사전 이미지를 찾을 수 없습니다. 최근에 기기를 변경하셨나요?",
+    "stores.LightningAddressStore.Cashu.quoteNotPaid": "Quote not paid",
+    "stores.LightningAddressStore.Cashu.quotePaymentErr": "Error checking for quote payment",
     "error.connectionRefused": "호스트에 연결할 수 없습니다. 노드 또는 해당 토르 프로세스를 재시작해 보세요.",
     "error.hostUnreachable": "호스트에 연결할 수 없습니다. 노드 또는 해당 토르 프로세스를 재시작해 보세요.",
     "error.nodeConnectError": "노드에 연결할 수 없습니다. 호스트와 포트가 올바르고 서비스가 실행 중인지 확인하세요.",
@@ -1173,6 +1197,7 @@
     "error.failureReasonInsufficientBalance": "송금 잔액 부족",
     "error.invalidMacaroon": "마카롱이 잘못되었습니다. 이 노드에 올바른 마카롱을 입력했는지 확인하세요.",
     "error.invalidResponse": "서버로부터 잘못된 응답 데이터 수신",
+    "error.serviceConnection": "Error connecting to service. Please try again later.",
     "pos.views.Wallet.PosPane.noOrders": "현재 진행 중인 주문이 없습니다. Zeus로 송금하려면 주문을 '기타 결제 유형'으로 표시하고 'Zeus', 'BTC' 또는 '비트코인'이 포함된 메모를 남기세요.",
     "pos.views.Wallet.PosPane.noOrdersStandalone": "현재 진행 중인 주문이 없습니다.",
     "pos.views.Wallet.PosPane.noOrdersPaid": "아직 결제된 주문이 없습니다.",
@@ -1210,10 +1235,17 @@
     "views.Settings.LightningAddress.chooseHandle": "표시될 이름을 정하세요",
     "views.Settings.LightningAddress.zaplockerVerification": "Zaplocker 인증",
     "views.Settings.LightningAddress.noPaymentsToRedeem": "상환 받을 결제 내역이 없습니다. 나중에 다시 확인해 주세요.",
+    "views.Settings.LightningAddress.noNeedToRedeem": "No redeem step required. Payments are sent directly to your wallet.",
     "views.Settings.LightningAddress.statusExplainer1": "이는 당신이 오프라인일 때 만들어질 수 있는 최대 결제 횟수입니다.",
     "views.Settings.LightningAddress.statusExplainer2": "필요할 때마다 더 많은 결제 해시값이 서버로 자동적으로 보내지며, 당신은 계속 결제를 받을 수 있게 됩니다.",
     "views.Settings.LightningAddress.generatingPreimages": "Preimage 생성 중",
     "views.Settings.LightningAddress.ChangeAddress": "주소 변경하기",
+    "views.Settings.LightningAddress.webPortalPos": "Web portal: Point of Sale",
+    "views.Settings.LightningAddress.webPortalPos.enableFiat": "Enable fiat pricing",
+    "views.Settings.LightningAddress.webPortalPos.syncSettings": "Sync settings",
+    "views.Settings.LightningAddress.switchToCashu": "Switch to Cashu Lightning address",
+    "views.Settings.LightningAddress.switchToNWC": "Switch to NWC Lightning address",
+    "views.Settings.LightningAddress.switchToZaplocker": "Switch to Zaplocker Lightning address",
     "views.Settings.LightningAddress.nostrKeys.changeWarning": "!주의!: Nostr 키를 변경하면 연동된 대기 중인 결제 내역들도 지워집니다. 새로운 키로 변경하기 전에 대기 중인 결제들을 먼저 회수하세요.",
     "views.Settings.LightningAddress.explainer1": "라이트닝 주소를 시작하려면 먼저 인바운드 유동성이 있는 제우스 LSP의 라이트닝 채널이 있어야 합니다.",
     "views.Settings.LightningAddress.explainer2": "가장 쉬운 방법은 0-검증 채널을 구매하는 것입니다. 인보이스를 생성하고 다른 라이트닝 지갑에서 직접 결제하기만 하면 됩니다.",
@@ -1221,6 +1253,11 @@
     "views.Settings.LightningAddress.get0ConfChan": "0-conf 채널 구매하기",
     "views.Settings.LightningAddress.getStandardChan": "표준 채널 얻기",
     "views.Settings.LightningAddress.generateNew": "새로운 사전 이미지 생성",
+    "views.Settings.LightningAddress.upgrade": "Upgrade to ZEUS Pay+",
+    "views.Settings.LightningAddress.changeConnectionString": "Change connection string",
+    "views.Settings.LightningAddress.testConnectionString": "Test connection string",
+    "views.Settings.LightningAddress.connectionTestSuccess": "Connection test successful!",
+    "views.Settings.LightningAddress.viewPlusPerks": "View perks",
     "views.Settings.LightningAddressSettings.title": "라이트닝 주소 설정값",
     "views.Settings.LightningAddressSettings.automaticallyAccept": "시작과 동시에 자동으로 결제 내역 지불 받기",
     "views.Settings.LightningAddressSettings.automaticallyAcceptAttestationLevel": "자동 수금을 위한 인증 수준",
@@ -1247,6 +1284,10 @@
     "views.Settings.LightningAddressInfo.invalidAttestationDetails": "유효하지 않거나 인증에 문제가 있습니다. 자세히 보려면 눌러주세요.",
     "views.Settings.LightningAddressInfo.noAttestationDetails": "Nostr 인증을 찾을 수 없습니다. 송금자의 지갑에서 해당 기능을 아직 지원하지 않을 수 있습니다.",
     "views.Settings.LightningAddressInfo.learnAboutZaplocker": "Zaplocker에 대해 더 알아보기",
+    "views.LightningAddress.ZeusPayPlus.subscribe": "Purchase annual subscription",
+    "views.LightningAddress.ZeusPayPlus.extend": "Extend subscription",
+    "views.LightningAddress.ZeusPayPlus.subActive": "Subscription Active",
+    "views.LightningAddress.ZeusPayPlus.noActiveSub": "No active subscription",
     "views.Settings.Attestations.title": "인증들",
     "views.Settings.Attestations.noAttestationsFound": "인증이 발견되지 않음",
     "views.Settings.Attestation.title": "인증",
@@ -1303,6 +1344,12 @@
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.apiUrl": "API URL",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.customApiUrl": "사용자 정의 API URL",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.start": "스윕 시작",
+    "views.Settings.Ecash.title": "Ecash settings",
+    "views.Settings.Ecash.enableEcash": "Enable Cashu ecash",
+    "views.Settings.Ecash.enableEcash.subtitle1": "Cashu is a Chaumian ecash protocol built for Bitcoin. It's a custodial solution but with better privacy than a traditional account.",
+    "views.Settings.Ecash.enableEcash.subtitle2": "You'll only want to store in Cashu what you can afford to lose, but it can make for a great solution for those who just want to test ZEUS for the first time or don't have enough bitcoin to open a Lightning channel yet.",
+    "views.Settings.Ecash.enableEcash.subtitle3": "ZEUS will periodically prompt you to upgrade to self-custody, once you have enough bitcoin to purchase a Lightning channel.",
+    "views.Settings.Ecash.enableEcash.learnMore": "Learn more about Cashu",
     "views.LspExplanation.text1": "Zeus는 셀프 커스터디 라이트닝 지갑입니다. 라이트닝 결제를 받거나 보내기 위해서는, 무조건 결제 채널을 개설해야 하며, 여기에는 비용이 발생합니다.",
     "views.LspExplanation.text2": "채널이 형성되면, 채널 잔액이 모두 소진될까지는 일반적인 라이트닝 네트워크 수수료만 지불하면 됩니다.",
     "views.LspExplanation.buttonText": "유동성에 대해 더 알아보기",
@@ -1386,6 +1433,86 @@
     "views.OnChainAddresses.sortBy.balanceDescending": "잔액 (내림차순)",
     "views.OnChainAddresses.createAddress": "주소 생성",
     "views.OnChainAddresses.changeAddresses": "주소 변경",
+    "views.Cashu.ReceiveEcash.title": "Receive Ecash",
+    "views.Cashu.ReceiveEcash.readTokenFromClipboard": "Read token from clipboard",
+    "views.Cashu.CashuInvoice.title": "Cashu Invoice",
+    "views.Cashu.CashuPayment.title": "Cashu Payment",
+    "cashu.mint": "Mint",
+    "cashu.mints": "Mints",
+    "cashu.mintUrl": "Mint URL",
+    "cashu.token": "Cashu token",
+    "cashu.receivedToken": "Received Cashu token",
+    "cashu.sentToken": "Sent Cashu token",
+    "cashu.unspentToken": "Unspent Cashu token",
+    "cashu.tapToConfigure": "No mints found. Tap to configure",
+    "cashu.tapToConfigure.short": "Tap to configure",
+    "cashu.mintToken": "Mint token",
+    "cashu.mintEcashToken": "Mint ecash token",
+    "cashu.errorAddingMint": "Error adding mint",
+    "views.Cashu.AddMint.title": "Add mint",
+    "views.Cashu.AddMint.discover": "Discover mints",
+    "views.Cashu.AddMint.discover.explainer": "These mints were recommended by other Nostr users. Read reviews at bitcoinmints.com. Be careful and do your own research before using a mint.",
+    "views.Cashu.AddMint.reviews": "Read mint reviews",
+    "views.Mints.noMints": "No mints added yet",
+    "views.Cashu.Mint.supportedNuts": "Supported Nuts",
+    "views.Cashu.Mint.removeMint": "Remove mint",
+    "views.Cashu.Mint.selectedMint": "This is your selected mint",
+    "views.Cashu.Mint.setSelected": "Set selected",
+    "views.Cashu.Mint.restoration": "Recovering your Cashu proofs and balances",
+    "views.Cashu.Mint.restorationKeyset": "Restoring keyset",
+    "views.Cashu.Mint.checkForExistingBalances": "Check for existing balances",
+    "views.Cashu.CashuPaymentRequest.sendingFrom": "Sending from",
+    "views.Cashu.CashuPaymentRequest.noBalance": "No ecash balance available. Receive a payment first.",
+    "views.Cashu.CashuPayment.inTransitPayment": "In Transit Cashu Payment",
+    "views.Cashu.CashuPayment.failedPayment": "Failed Cashu Payment",
+    "views.Cashu.CashuToken.proofCount": "Number of proofs",
+    "views.Cashu.CashuToken.notSupported": "This token has a unit that is not supported",
+    "views.Cashu.CashuToken.success": "Successfully imported token",
+    "views.Cashu.CashuToken.meltTokenSelfCustody": "Melt token to self-custody",
+    "views.Cashu.CashuToken.tokenSweep": "Cashu token sweep",
+    "views.Cashu.CashuToken.feeAdjusted": "Fee adjusted",
+    "views.Cashu.LightningAddressInfo.explainer1": "This is a custodial Lightning address tied to your Cashu wallet.",
+    "views.Cashu.LightningAddressInfo.explainer2": "It leverages NUT-20 to lock all incoming payments to your Cashu wallet's pubkey. There is no time period in which you must redeem the funds; they are available for you to pull into your Cashu wallet indefinitely.",
+    "views.Cashu.UnspentTokens.title": "Unspent tokens",
+    "views.Cashu.UnspentTokens.noUnspentTokens": "No unspent tokens",
+    "views.LightningAddress.NWC.explainer1": "This is a self-custodial Lightning address that connects to a remote node using Nostr Wallet Connect (NWC).",
+    "views.LightningAddress.NWC.explainer2": "Invoices are created directly on your node. There is no need to redeem the funds; they are available on your remote node immediately.",
+    "stores.CashuStore.initializingWallet": "Initializing ecash wallet",
+    "stores.CashuStore.startingWallet": "Starting ecash wallet",
+    "stores.CashuStore.alreadyPaid": "Invoice has already been paid.",
+    "stores.CashuStore.alreadySpent": "Token has already been spent.",
+    "stores.CashuStore.pending": "Payment is pending.",
+    "stores.CashuStore.claimError": "Error claming token",
+    "stores.CashuStore.errorMintingToken": "Error minting token",
+    "stores.CashuStore.notEnoughFunds": "Not enough funds to cover payment",
+    "stores.CashuStore.feeExceedsAmt": "Melt fees match or exceed token amount",
+    "cashu.upgradePrompt.title": "Upgrade to Self-Custody?",
+    "cashu.upgradePrompt.messageGeneral": "Your ecash balance is growing! Consider upgrading to a self-custodial Lightning wallet for better security and control over your funds.",
+    "cashu.upgradePrompt.message10k": "You now have enough sats to purchase your first Lightning channel! Upgrade to self-custody to truly own your bitcoin.",
+    "cashu.upgradePrompt.message25k": "Your ecash balance is growing! To ensure you can't lose your funds, consider upgrading to a self-custodial Lightning wallet.",
+    "cashu.upgradePrompt.message50k": "With this balance, it's strongly recommended to move to a self-custodial Lightning wallet. Don't trust, verify!",
+    "cashu.upgradePrompt.message100k": "High balance detected! It's crucial to upgrade to a self-custodial Lightning wallet now to secure your funds.",
+    "cashu.upgradePrompt.purchaseChannel": "Purchase Channel",
+    "cashu.upgradePrompt.learnMore": "Learn About Self-Custody",
+    "zeuspay.intro.explainer1": "ZEUS Pay is a service that give you a Lightning address, like satoshi@zeuspay.com, for receiving payments to your Lightning wallet.",
+    "zeuspay.intro.explainer2": "Below are the kinds of Lightning addresses you can have for your wallet type:",
+    "zeuspay.intro.prosAndCons": "Pros and cons",
+    "zeuspay.intro.prosAndCons.nostrVerification": "Nostr-based recipient verification system",
+    "zeuspay.intro.prosAndCons.redeemInApp": "Payments must be redeemed in the ZEUS app",
+    "zeuspay.intro.prosAndCons.noExpiry": "Unredeemed payments do not expire",
+    "zeuspay.intro.prosAndCons.settledUponPayment": "Payments settle on Lightning at time of payment",
+    "zeuspay.intro.prosAndCons.settledUponRedemption": "Payments settle on Lightning when redeemed in the ZEUS app",
+    "zeuspay.intro.prosAndCons.24hrs": "Payments must be redeemed within 24 hours or the payment is returned to the sender",
+    "zeuspay.intro.prosAndCons.channelRequired": "Requires a channel with the ZEUS LSP, with inbound liquidity",
+    "zeuspay.intro.prosAndCons.automaticallyAccepted": "Payments automatically accepted. No need to redeem manually in the ZEUS app.",
+    "zeuspay.intro.prosAndCons.noLspChannelNeeded": "No need for a channel with the ZEUS LSP",
+    "zeuspay.intro.prosAndCons.remotePlusNwc": "Requires a remote node with Nostr Wallet Connect",
+    "zeuspay.intro.prosAndCons.payPlusSubscription": "Requires a ZEUS Pay+ subscription",
+    "zeuspay.intro.ecash.overview": "Just starting your Lightning journey? The Cashu ecash powered address is a great way to get started. Works well on Nostr.",
+    "zeuspay.intro.zaplocker.overview": "The first-of-its-kind self-custodial Lightning address for mobile wallets.",
+    "zeuspay.intro.nwc.overview": "Connect directly to your remote node using Nostr Wallet Connect.",
+    "zeuspay.enableEcash": "Enable ecash",
+    "zeuspay.getChannel": "Get channel",
     "androidNotification.lndRunningBackground": "LND가 백그라운드에서 실행 중",
     "androidNotification.shutdown": "종료"
 }
