--- a/locales/cs.json
+++ b/locales/cs.json
@@ -18,6 +18,8 @@
     "general.continueQuestion": "Pokračovat?",
     "general.readOnlyWallet": "Peněženka pouze pro čtení",
     "general.custodialWallet": "Custodial peněženka",
+    "general.selfCustodial": "Self-custodial",
+    "general.custodial": "Custodial",
     "general.show": "Ukázat",
     "general.close": "Zavřít",
     "general.hide": "Skrýt",
@@ -26,6 +28,7 @@
     "general.goBack": "Přejít zpět",
     "general.lightning": "Lightning",
     "general.onchain": "On-chain",
+    "general.cashu": "Cashu",
     "general.activity": "Pohyby",
     "general.transaction": "Transakce",
     "general.confirmed": "Potvrzeno",
@@ -96,6 +99,7 @@
     "general.invalid": "Neplatný",
     "general.createdAt": "Vytvořeno v",
     "general.expiresAt": "Expiruje",
+    "general.expiresOn": "Expires on",
     "general.id": "ID",
     "general.hash": "Hash",
     "general.kind": "Typ",
@@ -133,6 +137,15 @@
     "general.unknown": "Není známo",
     "general.retry": "Zopakovat",
     "general.response": "Odpověď",
+    "general.approximately": "Approximately",
+    "general.selfCustody": "Self-custody",
+    "general.ecash": "Ecash",
+    "general.errorConnecting": "Error connecting",
+    "general.bitcoinPayment": "Bitcoin payment",
+    "general.unspent": "Unspent",
+    "general.remote": "Vzdálené",
+    "general.getStarted": "Začínáme",
+    "general.comingSoon": "Coming soon",
     "channel.status.good": "Dobrý",
     "channel.status.stable": "Stabilní",
     "channel.status.unstable": "Nestabilní",
@@ -713,6 +726,13 @@
     "views.ContactInfo.title": "Informace o kontaktu",
     "views.Tools.title": "Nástroje",
     "views.Tools.developers": "Vývojáři",
+    "views.Tools.cashu": "Cashu Tools",
+    "views.Tools.cashu.bumpWalletCounters": "Bump wallet counters",
+    "views.Tools.cashu.bumpWalletCounters.subtitle": "Helpful if your wallet counters get out of sync and you encounter 'Outputs have already been signed before' errors.",
+    "views.Tools.cashu.deleteData": "Delete all Cashu data",
+    "views.Tools.cashu.deleteData.confirmTitle": "Are you sure you want to delete all your Cashu data?",
+    "views.Tools.cashu.deleteData.confirmMessage": "Funds can still be restored by re-adding your mints, but transaction history will be lost.",
+    "stores.CashuStore.dataDeletedMessage": "Your Cashu data has been deleted.",
     "views.Tools.developerTools.title": "Nástroje pro vývojáře",
     "views.Tools.developerTools.noItemsExist": "Neexistuje žádná položka",
     "views.Settings.title": "Nastavení",
@@ -1015,6 +1035,7 @@
     "views.ActivityFilter.endDate": "Datum konce",
     "views.ActivityFilter.lightningPayments": "Lightning platby",
     "views.ActivityFilter.onChainPayments": "On-chain platby",
+    "views.ActivityFilter.cashuPayments": "Cashu payments",
     "views.ActivityFilter.minimumAmount": "Minimální částka (saty)",
     "views.ActivityFilter.maximumAmount": "Maximální částka (sats)",
     "views.ActivityFilter.maximumAmountPlaceHolder":"Bez limitu",
@@ -1137,6 +1158,7 @@
     "components.ChannelPicker.modal.description.multiple": "Zvolte kanál(y), který (které) bude (budou) použit(y) pro tuto operaci. Pro zachování vašeho soukromí možná budete chtít použít pouze určité kanály.",
     "components.LayerBalances.moreAccounts": "Další účty",
     "components.LayerBalances.moveFundsToLn": "Převést on-chain prostředky na Lightning",
+    "components.LayerBalances.lightningViaEcash": "Lightning via ecash",
     "backends.LND.wsReq.warning": "Možná budete muset povolit ověřování certifikátů, abyste mohli tato volání uskutečnit",
     "backends.LND.restReq.connectionError": "Chyba připojení",
     "utils.handleAnything.lightningAddressError": "Chyba při načítání dat Lightning adresy",
@@ -1160,6 +1182,8 @@
     "stores.LSPStore.error": "LSP chyba",
     "stores.LSPStore.connectionError": "Nepodařilo se připojit k LSP. Zkontrolujte prosím nastavení LSP nebo to zkuste později.",
     "stores.LightningAddressStore.preimageNotFound": "Předobraz nebyl na vašem zařízení nalezen. Nevyměnili jste v poslední době zařízení?",
+    "stores.LightningAddressStore.Cashu.quoteNotPaid": "Quote not paid",
+    "stores.LightningAddressStore.Cashu.quotePaymentErr": "Error checking for quote payment",
     "error.connectionRefused": "Hostitel je nedostupný. Zkuste restartovat uzel nebo jeho Tor proces.",
     "error.hostUnreachable": "Hostitel je nedostupný. Zkuste restartovat uzel nebo jeho Tor proces.",
     "error.nodeConnectError": "Připojení k uzlu se nezdařilo. Ověřte prosím, zda jsou údaje jako adresa hostitele a port správně zadány a zda služba běží.",
@@ -1173,6 +1197,7 @@
     "error.failureReasonInsufficientBalance": "Nedostatečný místní zůstatek",
     "error.invalidMacaroon": "Neplatný macaroon. Ověřte prosím, že jste pro tento uzel zadali správný macaroon.",
     "error.invalidResponse": "Od serveru byla obdržena neplatná data odpovědi",
+    "error.serviceConnection": "Error connecting to service. Please try again later.",
     "pos.views.Wallet.PosPane.noOrders": "V současné době nejsou otevřeny žádné objednávky. Chcete-li odeslat platbu do ZEUS, označte objednávku jako „Jiný typ platby“ s poznámkou, která obsahuje „Zeus“, „BTC“ nebo „Bitcoin“.",
     "pos.views.Wallet.PosPane.noOrdersStandalone": "Momentálně nejsou otevřené žádné objednávky",
     "pos.views.Wallet.PosPane.noOrdersPaid": "Zatím nebyly uhrazeny žádné objednávky",
@@ -1210,10 +1235,17 @@
     "views.Settings.LightningAddress.chooseHandle": "Vyberte přezdívku",
     "views.Settings.LightningAddress.zaplockerVerification": "Ověření Zaplockeru",
     "views.Settings.LightningAddress.noPaymentsToRedeem": "Žádné platby k proplacení. Zkontrolujte to později.",
+    "views.Settings.LightningAddress.noNeedToRedeem": "No redeem step required. Payments are sent directly to your wallet.",
     "views.Settings.LightningAddress.statusExplainer1": "Jedná se o počet plateb, které vám mohou být poslány, zatímco jste offline.",
     "views.Settings.LightningAddress.statusExplainer2": "V případě potřeby bude automaticky odesláno více platebních hashů serveru, abyste mohli i nadále přijímat platby.",
     "views.Settings.LightningAddress.generatingPreimages": "Generování předobrazů",
     "views.Settings.LightningAddress.ChangeAddress": "Změnit adresu",
+    "views.Settings.LightningAddress.webPortalPos": "Web portal: Point of Sale",
+    "views.Settings.LightningAddress.webPortalPos.enableFiat": "Enable fiat pricing",
+    "views.Settings.LightningAddress.webPortalPos.syncSettings": "Sync settings",
+    "views.Settings.LightningAddress.switchToCashu": "Switch to Cashu Lightning address",
+    "views.Settings.LightningAddress.switchToNWC": "Switch to NWC Lightning address",
+    "views.Settings.LightningAddress.switchToZaplocker": "Switch to Zaplocker Lightning address",
     "views.Settings.LightningAddress.nostrKeys.changeWarning": "Varování: změna vašich Nostr klíčů smaže vaše čekající platby. Před odesláním nových klíčů si prosím vyplaťte nevyřízené platby.",
     "views.Settings.LightningAddress.explainer1": "Chcete-li začít používat lightningovou adresu, nejdříve musíte mít lightningový kanál od ZEUS LSP s příchozí likviditou.",
     "views.Settings.LightningAddress.explainer2": "Nejsnadněji toho dosáhnete tím, že si zakoupíte 0-conf kanál. Stačí pouze vygenerovat lightningovou fakturu a zaplatit ji z jiné lightningové peněženky.",
@@ -1221,6 +1253,11 @@
     "views.Settings.LightningAddress.get0ConfChan": "Získat 0-conf kanál",
     "views.Settings.LightningAddress.getStandardChan": "Získat standardní kanál",
     "views.Settings.LightningAddress.generateNew": "Vygenerovat nové předobrazy",
+    "views.Settings.LightningAddress.upgrade": "Upgrade to ZEUS Pay+",
+    "views.Settings.LightningAddress.changeConnectionString": "Change connection string",
+    "views.Settings.LightningAddress.testConnectionString": "Test connection string",
+    "views.Settings.LightningAddress.connectionTestSuccess": "Connection test successful!",
+    "views.Settings.LightningAddress.viewPlusPerks": "View perks",
     "views.Settings.LightningAddressSettings.title": "Nastavení Lightning adresy",
     "views.Settings.LightningAddressSettings.automaticallyAccept": "Při zapnutí automaticky přijmout platby",
     "views.Settings.LightningAddressSettings.automaticallyAcceptAttestationLevel": "Úroveň osvědčení pro automatické přijetí",
@@ -1247,6 +1284,10 @@
     "views.Settings.LightningAddressInfo.invalidAttestationDetails": "Neplatná nebo protichůdná osvědčení. Klepněte pro zobrazení podrobností.",
     "views.Settings.LightningAddressInfo.noAttestationDetails": "Nenalezena žádná osvědčení Nostr. Peněženka odesílatele je pravděpodobně ještě nepodporuje.",
     "views.Settings.LightningAddressInfo.learnAboutZaplocker": "Více informací o Zaplockeru",
+    "views.LightningAddress.ZeusPayPlus.subscribe": "Purchase annual subscription",
+    "views.LightningAddress.ZeusPayPlus.extend": "Extend subscription",
+    "views.LightningAddress.ZeusPayPlus.subActive": "Subscription Active",
+    "views.LightningAddress.ZeusPayPlus.noActiveSub": "No active subscription",
     "views.Settings.Attestations.title": "Osvědčení",
     "views.Settings.Attestations.noAttestationsFound": "Nenalezena žádná osvědčení",
     "views.Settings.Attestation.title": "Osvědčení",
@@ -1303,6 +1344,12 @@
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.apiUrl": "API URL",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.customApiUrl": "Vlastní API URL",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.start": "Zahájit výběr",
+    "views.Settings.Ecash.title": "Ecash settings",
+    "views.Settings.Ecash.enableEcash": "Enable Cashu ecash",
+    "views.Settings.Ecash.enableEcash.subtitle1": "Cashu is a Chaumian ecash protocol built for Bitcoin. It's a custodial solution but with better privacy than a traditional account.",
+    "views.Settings.Ecash.enableEcash.subtitle2": "You'll only want to store in Cashu what you can afford to lose, but it can make for a great solution for those who just want to test ZEUS for the first time or don't have enough bitcoin to open a Lightning channel yet.",
+    "views.Settings.Ecash.enableEcash.subtitle3": "ZEUS will periodically prompt you to upgrade to self-custody, once you have enough bitcoin to purchase a Lightning channel.",
+    "views.Settings.Ecash.enableEcash.learnMore": "Learn more about Cashu",
     "views.LspExplanation.text1": "Zeus je self-custodial Lightning peněženka. Chcete-li odeslat nebo přijmout platbu, musíte si otevřít platební kanál lightning, který je zpoplatněn zřizovacím poplatkem.",
     "views.LspExplanation.text2": "Po nastavení kanálu budete platit běžné poplatky v Lightning síti pouze do vyčerpání kapacity kanálu.",
     "views.LspExplanation.buttonText": "Zjistěte více o likviditě",
@@ -1386,6 +1433,86 @@
     "views.OnChainAddresses.sortBy.balanceDescending": "Zůstatek (sestupně)",
     "views.OnChainAddresses.createAddress": "Vytvořit adresu",
     "views.OnChainAddresses.changeAddresses": "Change adresy",
+    "views.Cashu.ReceiveEcash.title": "Receive Ecash",
+    "views.Cashu.ReceiveEcash.readTokenFromClipboard": "Read token from clipboard",
+    "views.Cashu.CashuInvoice.title": "Cashu Invoice",
+    "views.Cashu.CashuPayment.title": "Cashu Payment",
+    "cashu.mint": "Mint",
+    "cashu.mints": "Mints",
+    "cashu.mintUrl": "Mint URL",
+    "cashu.token": "Cashu token",
+    "cashu.receivedToken": "Received Cashu token",
+    "cashu.sentToken": "Sent Cashu token",
+    "cashu.unspentToken": "Unspent Cashu token",
+    "cashu.tapToConfigure": "No mints found. Tap to configure",
+    "cashu.tapToConfigure.short": "Tap to configure",
+    "cashu.mintToken": "Mint token",
+    "cashu.mintEcashToken": "Mint ecash token",
+    "cashu.errorAddingMint": "Error adding mint",
+    "views.Cashu.AddMint.title": "Add mint",
+    "views.Cashu.AddMint.discover": "Discover mints",
+    "views.Cashu.AddMint.discover.explainer": "These mints were recommended by other Nostr users. Read reviews at bitcoinmints.com. Be careful and do your own research before using a mint.",
+    "views.Cashu.AddMint.reviews": "Read mint reviews",
+    "views.Mints.noMints": "No mints added yet",
+    "views.Cashu.Mint.supportedNuts": "Supported Nuts",
+    "views.Cashu.Mint.removeMint": "Remove mint",
+    "views.Cashu.Mint.selectedMint": "This is your selected mint",
+    "views.Cashu.Mint.setSelected": "Set selected",
+    "views.Cashu.Mint.restoration": "Recovering your Cashu proofs and balances",
+    "views.Cashu.Mint.restorationKeyset": "Restoring keyset",
+    "views.Cashu.Mint.checkForExistingBalances": "Check for existing balances",
+    "views.Cashu.CashuPaymentRequest.sendingFrom": "Sending from",
+    "views.Cashu.CashuPaymentRequest.noBalance": "No ecash balance available. Receive a payment first.",
+    "views.Cashu.CashuPayment.inTransitPayment": "In Transit Cashu Payment",
+    "views.Cashu.CashuPayment.failedPayment": "Failed Cashu Payment",
+    "views.Cashu.CashuToken.proofCount": "Number of proofs",
+    "views.Cashu.CashuToken.notSupported": "This token has a unit that is not supported",
+    "views.Cashu.CashuToken.success": "Successfully imported token",
+    "views.Cashu.CashuToken.meltTokenSelfCustody": "Melt token to self-custody",
+    "views.Cashu.CashuToken.tokenSweep": "Cashu token sweep",
+    "views.Cashu.CashuToken.feeAdjusted": "Fee adjusted",
+    "views.Cashu.LightningAddressInfo.explainer1": "This is a custodial Lightning address tied to your Cashu wallet.",
+    "views.Cashu.LightningAddressInfo.explainer2": "It leverages NUT-20 to lock all incoming payments to your Cashu wallet's pubkey. There is no time period in which you must redeem the funds; they are available for you to pull into your Cashu wallet indefinitely.",
+    "views.Cashu.UnspentTokens.title": "Unspent tokens",
+    "views.Cashu.UnspentTokens.noUnspentTokens": "No unspent tokens",
+    "views.LightningAddress.NWC.explainer1": "This is a self-custodial Lightning address that connects to a remote node using Nostr Wallet Connect (NWC).",
+    "views.LightningAddress.NWC.explainer2": "Invoices are created directly on your node. There is no need to redeem the funds; they are available on your remote node immediately.",
+    "stores.CashuStore.initializingWallet": "Initializing ecash wallet",
+    "stores.CashuStore.startingWallet": "Starting ecash wallet",
+    "stores.CashuStore.alreadyPaid": "Invoice has already been paid.",
+    "stores.CashuStore.alreadySpent": "Token has already been spent.",
+    "stores.CashuStore.pending": "Payment is pending.",
+    "stores.CashuStore.claimError": "Error claming token",
+    "stores.CashuStore.errorMintingToken": "Error minting token",
+    "stores.CashuStore.notEnoughFunds": "Not enough funds to cover payment",
+    "stores.CashuStore.feeExceedsAmt": "Melt fees match or exceed token amount",
+    "cashu.upgradePrompt.title": "Upgrade to Self-Custody?",
+    "cashu.upgradePrompt.messageGeneral": "Your ecash balance is growing! Consider upgrading to a self-custodial Lightning wallet for better security and control over your funds.",
+    "cashu.upgradePrompt.message10k": "You now have enough sats to purchase your first Lightning channel! Upgrade to self-custody to truly own your bitcoin.",
+    "cashu.upgradePrompt.message25k": "Your ecash balance is growing! To ensure you can't lose your funds, consider upgrading to a self-custodial Lightning wallet.",
+    "cashu.upgradePrompt.message50k": "With this balance, it's strongly recommended to move to a self-custodial Lightning wallet. Don't trust, verify!",
+    "cashu.upgradePrompt.message100k": "High balance detected! It's crucial to upgrade to a self-custodial Lightning wallet now to secure your funds.",
+    "cashu.upgradePrompt.purchaseChannel": "Purchase Channel",
+    "cashu.upgradePrompt.learnMore": "Learn About Self-Custody",
+    "zeuspay.intro.explainer1": "ZEUS Pay is a service that give you a Lightning address, like satoshi@zeuspay.com, for receiving payments to your Lightning wallet.",
+    "zeuspay.intro.explainer2": "Below are the kinds of Lightning addresses you can have for your wallet type:",
+    "zeuspay.intro.prosAndCons": "Pros and cons",
+    "zeuspay.intro.prosAndCons.nostrVerification": "Nostr-based recipient verification system",
+    "zeuspay.intro.prosAndCons.redeemInApp": "Payments must be redeemed in the ZEUS app",
+    "zeuspay.intro.prosAndCons.noExpiry": "Unredeemed payments do not expire",
+    "zeuspay.intro.prosAndCons.settledUponPayment": "Payments settle on Lightning at time of payment",
+    "zeuspay.intro.prosAndCons.settledUponRedemption": "Payments settle on Lightning when redeemed in the ZEUS app",
+    "zeuspay.intro.prosAndCons.24hrs": "Payments must be redeemed within 24 hours or the payment is returned to the sender",
+    "zeuspay.intro.prosAndCons.channelRequired": "Requires a channel with the ZEUS LSP, with inbound liquidity",
+    "zeuspay.intro.prosAndCons.automaticallyAccepted": "Payments automatically accepted. No need to redeem manually in the ZEUS app.",
+    "zeuspay.intro.prosAndCons.noLspChannelNeeded": "No need for a channel with the ZEUS LSP",
+    "zeuspay.intro.prosAndCons.remotePlusNwc": "Requires a remote node with Nostr Wallet Connect",
+    "zeuspay.intro.prosAndCons.payPlusSubscription": "Requires a ZEUS Pay+ subscription",
+    "zeuspay.intro.ecash.overview": "Just starting your Lightning journey? The Cashu ecash powered address is a great way to get started. Works well on Nostr.",
+    "zeuspay.intro.zaplocker.overview": "The first-of-its-kind self-custodial Lightning address for mobile wallets.",
+    "zeuspay.intro.nwc.overview": "Connect directly to your remote node using Nostr Wallet Connect.",
+    "zeuspay.enableEcash": "Enable ecash",
+    "zeuspay.getChannel": "Get channel",
     "androidNotification.lndRunningBackground": "LND běží na pozadí",
     "androidNotification.shutdown": "Vypnout"
 }
