--- a/locales/el.json
+++ b/locales/el.json
@@ -18,6 +18,8 @@
     "general.continueQuestion": "Continue?",
     "general.readOnlyWallet": "Πορτοφόλι μόνο για ανάγνωση",
     "general.custodialWallet": " Πορτοφόλι χωρίς αυτοδιαχείριση",
+    "general.selfCustodial": "Self-custodial",
+    "general.custodial": "Custodial",
     "general.show": "Εμφάνιση",
     "general.close": "Κλείσιμο",
     "general.hide": "Απόκρυψη",
@@ -26,6 +28,7 @@
     "general.goBack": "Επιστροφή",
     "general.lightning": "Lightning",
     "general.onchain": "Εντός της αλυσίδας",
+    "general.cashu": "Cashu",
     "general.activity": "Δραστηριότητα",
     "general.transaction": "Συναλλαγή",
     "general.confirmed": "Επιβεβαιωμένη",
@@ -96,6 +99,7 @@
     "general.invalid": "Άκυρη",
     "general.createdAt": "Δημιουργήθηκε στις ",
     "general.expiresAt": "Λήγει σε",
+    "general.expiresOn": "Expires on",
     "general.id": "Ταυτότητα",
     "general.hash": "Κατακερματισμός",
     "general.kind": "Είδος",
@@ -133,6 +137,15 @@
     "general.unknown": "Άγνωστο",
     "general.retry": "Retry",
     "general.response": "Response",
+    "general.approximately": "Approximately",
+    "general.selfCustody": "Self-custody",
+    "general.ecash": "Ecash",
+    "general.errorConnecting": "Error connecting",
+    "general.bitcoinPayment": "Bitcoin payment",
+    "general.unspent": "Unspent",
+    "general.remote": "Απομακρυσμένο",
+    "general.getStarted": "Ξεκινήστε",
+    "general.comingSoon": "Coming soon",
     "channel.status.good": "Καλώς",
     "channel.status.stable": "Stable",
     "channel.status.unstable": "Unstable",
@@ -713,6 +726,13 @@
     "views.ContactInfo.title": "Πληροφορίες επαφής",
     "views.Tools.title": "Εργαλεία",
     "views.Tools.developers": "Developers",
+    "views.Tools.cashu": "Cashu Tools",
+    "views.Tools.cashu.bumpWalletCounters": "Bump wallet counters",
+    "views.Tools.cashu.bumpWalletCounters.subtitle": "Helpful if your wallet counters get out of sync and you encounter 'Outputs have already been signed before' errors.",
+    "views.Tools.cashu.deleteData": "Delete all Cashu data",
+    "views.Tools.cashu.deleteData.confirmTitle": "Are you sure you want to delete all your Cashu data?",
+    "views.Tools.cashu.deleteData.confirmMessage": "Funds can still be restored by re-adding your mints, but transaction history will be lost.",
+    "stores.CashuStore.dataDeletedMessage": "Your Cashu data has been deleted.",
     "views.Tools.developerTools.title": "Developer Tools",
     "views.Tools.developerTools.noItemsExist": "No items exist",
     "views.Settings.title": "Ρυθμίσεις",
@@ -1015,6 +1035,7 @@
     "views.ActivityFilter.endDate": "Ημερομηνία ολοκλήρωσης",
     "views.ActivityFilter.lightningPayments": "Πληρωμές Lightning",
     "views.ActivityFilter.onChainPayments": "Πληρωμές εντός της αλυσίδας",
+    "views.ActivityFilter.cashuPayments": "Cashu payments",
     "views.ActivityFilter.minimumAmount": "Ελάχιστο ποσό (sats)",
     "views.ActivityFilter.maximumAmount": "Maximum Amount (sats)",
     "views.ActivityFilter.maximumAmountPlaceHolder":"No limit",
@@ -1137,6 +1158,7 @@
     "components.ChannelPicker.modal.description.multiple": "Επιλέξτε ένα κανάλι(α) για χρήση σε αυτή την διαδικασία. Μπορεί να θέλετε να κάνετε χρήση μόνο σε συγκεκριμένα κανάλια για να διατηρήσετε την ιδιωτικότητα σας.",
     "components.LayerBalances.moreAccounts": "Περισσότεροι λογαριασμοί",
     "components.LayerBalances.moveFundsToLn": "Move on-chain funds to lightning",
+    "components.LayerBalances.lightningViaEcash": "Lightning via ecash",
     "backends.LND.wsReq.warning": "Ίσως χρειαστεί να ενεργοποιήσετε την επαλήθευση πιστοποιητικού για να πραγματοποιήσετε τέτοιου είδους κλήσεις",
     "backends.LND.restReq.connectionError": "Σφάλμα σύνδεσης",
     "utils.handleAnything.lightningAddressError": "Σφάλμα ανάκτησης δεδομένων διεύθυνσης Lightning",
@@ -1160,6 +1182,8 @@
     "stores.LSPStore.error": "Σφάλμα LSP",
     "stores.LSPStore.connectionError": "Δεν μπόρεσε να συνδεθεί με LSP. Ελέγξτε τις ρυθμίσεις του LSP ή δοκιμάστε ξανά αργότερα.",
     "stores.LightningAddressStore.preimageNotFound": "Pre-image not found on your device. Did you recently change devices?",
+    "stores.LightningAddressStore.Cashu.quoteNotPaid": "Quote not paid",
+    "stores.LightningAddressStore.Cashu.quotePaymentErr": "Error checking for quote payment",
     "error.connectionRefused": "Μη προσβάσιμος κεντρικός υπολογιστής. Δοκιμάστε να επανεκκινήσετε τον κόμβο σας ή τη διαδικασία Tor.",
     "error.hostUnreachable": "Μη προσβάσιμος κεντρικός υπολογιστής. Δοκιμάστε να επανεκκινήσετε τον κόμβο σας ή τη διαδικασία Tor.",
     "error.nodeConnectError": "Unable to connect to node. Please verify the host and port are correct and the service is running.",
@@ -1173,6 +1197,7 @@
     "error.failureReasonInsufficientBalance": "Μη επαρκές τοπικό υπόλοιπο",
     "error.invalidMacaroon": "Invalid macaroon. Please check that you've entered the correct macaroon for this node.",
     "error.invalidResponse": "Received invalid response data from the server",
+    "error.serviceConnection": "Error connecting to service. Please try again later.",
     "pos.views.Wallet.PosPane.noOrders": "Δεν υπάρχουν ανοιχτές παραγγελίες αυτή τη στιγμή. Για να στείλετε στο ZEUS, σημειώστε την παραγγελία ως 'Άλλος τύπος πληρωμής' με μια σημείωση που περιλαμβάνει 'Zeus', 'BTC' ή 'Bitcoin'.",
     "pos.views.Wallet.PosPane.noOrdersStandalone": "Δεν υπάρχουν ανοιχτές παραγγελίες αυτή τη στιγμή",
     "pos.views.Wallet.PosPane.noOrdersPaid": "Δεν έχουν πληρωθεί παραγγελίες ακόμη",
@@ -1210,10 +1235,17 @@
     "views.Settings.LightningAddress.chooseHandle": "Επιλέξτε ένα ψευδώνυμο",
     "views.Settings.LightningAddress.zaplockerVerification": "Επιβεβαίωση Zaplocker",
     "views.Settings.LightningAddress.noPaymentsToRedeem": "Δεν υπάρχουν πληρωμές για εξαργύρωση. Επιστρέψτε αργότερα.",
+    "views.Settings.LightningAddress.noNeedToRedeem": "No redeem step required. Payments are sent directly to your wallet.",
     "views.Settings.LightningAddress.statusExplainer1": "Αυτός είναι ο αριθμός των πληρωμών που μπορούν να γίνουν σε εσάς ενώ είστε εκτός σύνδεσης.",
     "views.Settings.LightningAddress.statusExplainer2": "Περισσότεροι κατακερματισμοί πληρωμών θα αποστέλλονται στον διακομιστή αυτόματα όταν απαιτείται, ώστε να μπορείτε να συνεχίσετε να λαμβάνετε πληρωμές.",
     "views.Settings.LightningAddress.generatingPreimages": "Δημιουργία προεικόνων",
     "views.Settings.LightningAddress.ChangeAddress": "Αλλαγή διεύθυνσης",
+    "views.Settings.LightningAddress.webPortalPos": "Web portal: Point of Sale",
+    "views.Settings.LightningAddress.webPortalPos.enableFiat": "Enable fiat pricing",
+    "views.Settings.LightningAddress.webPortalPos.syncSettings": "Sync settings",
+    "views.Settings.LightningAddress.switchToCashu": "Switch to Cashu Lightning address",
+    "views.Settings.LightningAddress.switchToNWC": "Switch to NWC Lightning address",
+    "views.Settings.LightningAddress.switchToZaplocker": "Switch to Zaplocker Lightning address",
     "views.Settings.LightningAddress.nostrKeys.changeWarning": "Προειδοποίηση: η αλλαγή των κλειδιών Nostr θα διαγράψει τις εκκρεμείς πληρωμές σας. Εξαργυρώστε τις εκκρεμείς πληρωμές σας πριν υποβάλετε νέα κλειδιά.",
     "views.Settings.LightningAddress.explainer1": "To get started with a lightning address you must first have a lightning channel from the ZEUS LSP with inbound liquidity.",
     "views.Settings.LightningAddress.explainer2": "The easiest way to do so is to purchase a 0-conf channel. Just generate an invoice and pay yourself from another lightning wallet.",
@@ -1221,6 +1253,11 @@
     "views.Settings.LightningAddress.get0ConfChan": "Λήψη καναλιού 0-επιβεβαιώσεων",
     "views.Settings.LightningAddress.getStandardChan": "Get standard channel",
     "views.Settings.LightningAddress.generateNew": "Generate new pre-images",
+    "views.Settings.LightningAddress.upgrade": "Upgrade to ZEUS Pay+",
+    "views.Settings.LightningAddress.changeConnectionString": "Change connection string",
+    "views.Settings.LightningAddress.testConnectionString": "Test connection string",
+    "views.Settings.LightningAddress.connectionTestSuccess": "Connection test successful!",
+    "views.Settings.LightningAddress.viewPlusPerks": "View perks",
     "views.Settings.LightningAddressSettings.title": "Ρυθμίσεις διεύθυνσης Lightning",
     "views.Settings.LightningAddressSettings.automaticallyAccept": "Αυτόματη αποδοχή πληρωμών κατά την εκκίνηση",
     "views.Settings.LightningAddressSettings.automaticallyAcceptAttestationLevel": "Επίπεδο πιστοποίησης για αυτόματη αποδοχή",
@@ -1247,6 +1284,10 @@
     "views.Settings.LightningAddressInfo.invalidAttestationDetails": "Άκυρες ή αντικρουόμενες πιστοποιήσεις. Πατήστε για να δείτε λεπτομέρειες.",
     "views.Settings.LightningAddressInfo.noAttestationDetails": "Δεν βρέθηκαν πιστοποιήσεις του Nostr. Το πορτοφόλι του αποστολέα πιθανότατα δεν το υποστηρίζει ακόμα.",
     "views.Settings.LightningAddressInfo.learnAboutZaplocker": "Μάθετε περισσότερα για το Zaplocker",
+    "views.LightningAddress.ZeusPayPlus.subscribe": "Purchase annual subscription",
+    "views.LightningAddress.ZeusPayPlus.extend": "Extend subscription",
+    "views.LightningAddress.ZeusPayPlus.subActive": "Subscription Active",
+    "views.LightningAddress.ZeusPayPlus.noActiveSub": "No active subscription",
     "views.Settings.Attestations.title": "Πιστοποιήσεις",
     "views.Settings.Attestations.noAttestationsFound": "Δεν βρέθηκαν πιστοποιήσεις",
     "views.Settings.Attestation.title": "Πιστοποίηση",
@@ -1303,6 +1344,12 @@
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.apiUrl": "API URL",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.customApiUrl": "Custom API URL",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.start": "Start sweep",
+    "views.Settings.Ecash.title": "Ecash settings",
+    "views.Settings.Ecash.enableEcash": "Enable Cashu ecash",
+    "views.Settings.Ecash.enableEcash.subtitle1": "Cashu is a Chaumian ecash protocol built for Bitcoin. It's a custodial solution but with better privacy than a traditional account.",
+    "views.Settings.Ecash.enableEcash.subtitle2": "You'll only want to store in Cashu what you can afford to lose, but it can make for a great solution for those who just want to test ZEUS for the first time or don't have enough bitcoin to open a Lightning channel yet.",
+    "views.Settings.Ecash.enableEcash.subtitle3": "ZEUS will periodically prompt you to upgrade to self-custody, once you have enough bitcoin to purchase a Lightning channel.",
+    "views.Settings.Ecash.enableEcash.learnMore": "Learn more about Cashu",
     "views.LspExplanation.text1": "Το Zeus είναι ένα αυτοδιαχειριζόμενο πορτοφόλι lightning. Για να στείλετε ή να λάβετε μια πληρωμή με lightning, πρέπει να ανοίξετε ένα κανάλι πληρωμών lightning, το οποίο έχει ένα τέλος εγκατάστασης.",
     "views.LspExplanation.text2": "Μόλις δημιουργηθεί το κανάλι, θα πρέπει να πληρώνετε τα κανονικά τέλη δικτύου μόνο μέχρι να εξαντλήσετε τη χωρητικότητά του.",
     "views.LspExplanation.buttonText": "Μάθετε περισσότερα για την ρευστότητα",
@@ -1386,6 +1433,86 @@
     "views.OnChainAddresses.sortBy.balanceDescending": "Balance (descending)",
     "views.OnChainAddresses.createAddress": "Create address",
     "views.OnChainAddresses.changeAddresses": "Change addresses",
+    "views.Cashu.ReceiveEcash.title": "Receive Ecash",
+    "views.Cashu.ReceiveEcash.readTokenFromClipboard": "Read token from clipboard",
+    "views.Cashu.CashuInvoice.title": "Cashu Invoice",
+    "views.Cashu.CashuPayment.title": "Cashu Payment",
+    "cashu.mint": "Μέντα ",
+    "cashu.mints": "Mints",
+    "cashu.mintUrl": "Mint URL",
+    "cashu.token": "Cashu token",
+    "cashu.receivedToken": "Received Cashu token",
+    "cashu.sentToken": "Sent Cashu token",
+    "cashu.unspentToken": "Unspent Cashu token",
+    "cashu.tapToConfigure": "No mints found. Tap to configure",
+    "cashu.tapToConfigure.short": "Tap to configure",
+    "cashu.mintToken": "Mint token",
+    "cashu.mintEcashToken": "Mint ecash token",
+    "cashu.errorAddingMint": "Error adding mint",
+    "views.Cashu.AddMint.title": "Add mint",
+    "views.Cashu.AddMint.discover": "Discover mints",
+    "views.Cashu.AddMint.discover.explainer": "These mints were recommended by other Nostr users. Read reviews at bitcoinmints.com. Be careful and do your own research before using a mint.",
+    "views.Cashu.AddMint.reviews": "Read mint reviews",
+    "views.Mints.noMints": "No mints added yet",
+    "views.Cashu.Mint.supportedNuts": "Supported Nuts",
+    "views.Cashu.Mint.removeMint": "Remove mint",
+    "views.Cashu.Mint.selectedMint": "This is your selected mint",
+    "views.Cashu.Mint.setSelected": "Set selected",
+    "views.Cashu.Mint.restoration": "Recovering your Cashu proofs and balances",
+    "views.Cashu.Mint.restorationKeyset": "Restoring keyset",
+    "views.Cashu.Mint.checkForExistingBalances": "Check for existing balances",
+    "views.Cashu.CashuPaymentRequest.sendingFrom": "Sending from",
+    "views.Cashu.CashuPaymentRequest.noBalance": "No ecash balance available. Receive a payment first.",
+    "views.Cashu.CashuPayment.inTransitPayment": "In Transit Cashu Payment",
+    "views.Cashu.CashuPayment.failedPayment": "Failed Cashu Payment",
+    "views.Cashu.CashuToken.proofCount": "Number of proofs",
+    "views.Cashu.CashuToken.notSupported": "This token has a unit that is not supported",
+    "views.Cashu.CashuToken.success": "Successfully imported token",
+    "views.Cashu.CashuToken.meltTokenSelfCustody": "Melt token to self-custody",
+    "views.Cashu.CashuToken.tokenSweep": "Cashu token sweep",
+    "views.Cashu.CashuToken.feeAdjusted": "Fee adjusted",
+    "views.Cashu.LightningAddressInfo.explainer1": "This is a custodial Lightning address tied to your Cashu wallet.",
+    "views.Cashu.LightningAddressInfo.explainer2": "It leverages NUT-20 to lock all incoming payments to your Cashu wallet's pubkey. There is no time period in which you must redeem the funds; they are available for you to pull into your Cashu wallet indefinitely.",
+    "views.Cashu.UnspentTokens.title": "Unspent tokens",
+    "views.Cashu.UnspentTokens.noUnspentTokens": "No unspent tokens",
+    "views.LightningAddress.NWC.explainer1": "This is a self-custodial Lightning address that connects to a remote node using Nostr Wallet Connect (NWC).",
+    "views.LightningAddress.NWC.explainer2": "Invoices are created directly on your node. There is no need to redeem the funds; they are available on your remote node immediately.",
+    "stores.CashuStore.initializingWallet": "Initializing ecash wallet",
+    "stores.CashuStore.startingWallet": "Starting ecash wallet",
+    "stores.CashuStore.alreadyPaid": "Invoice has already been paid.",
+    "stores.CashuStore.alreadySpent": "Token has already been spent.",
+    "stores.CashuStore.pending": "Payment is pending.",
+    "stores.CashuStore.claimError": "Error claming token",
+    "stores.CashuStore.errorMintingToken": "Error minting token",
+    "stores.CashuStore.notEnoughFunds": "Not enough funds to cover payment",
+    "stores.CashuStore.feeExceedsAmt": "Melt fees match or exceed token amount",
+    "cashu.upgradePrompt.title": "Upgrade to Self-Custody?",
+    "cashu.upgradePrompt.messageGeneral": "Your ecash balance is growing! Consider upgrading to a self-custodial Lightning wallet for better security and control over your funds.",
+    "cashu.upgradePrompt.message10k": "You now have enough sats to purchase your first Lightning channel! Upgrade to self-custody to truly own your bitcoin.",
+    "cashu.upgradePrompt.message25k": "Your ecash balance is growing! To ensure you can't lose your funds, consider upgrading to a self-custodial Lightning wallet.",
+    "cashu.upgradePrompt.message50k": "With this balance, it's strongly recommended to move to a self-custodial Lightning wallet. Don't trust, verify!",
+    "cashu.upgradePrompt.message100k": "High balance detected! It's crucial to upgrade to a self-custodial Lightning wallet now to secure your funds.",
+    "cashu.upgradePrompt.purchaseChannel": "Purchase Channel",
+    "cashu.upgradePrompt.learnMore": "Learn About Self-Custody",
+    "zeuspay.intro.explainer1": "ZEUS Pay is a service that give you a Lightning address, like satoshi@zeuspay.com, for receiving payments to your Lightning wallet.",
+    "zeuspay.intro.explainer2": "Below are the kinds of Lightning addresses you can have for your wallet type:",
+    "zeuspay.intro.prosAndCons": "Pros and cons",
+    "zeuspay.intro.prosAndCons.nostrVerification": "Nostr-based recipient verification system",
+    "zeuspay.intro.prosAndCons.redeemInApp": "Payments must be redeemed in the ZEUS app",
+    "zeuspay.intro.prosAndCons.noExpiry": "Unredeemed payments do not expire",
+    "zeuspay.intro.prosAndCons.settledUponPayment": "Payments settle on Lightning at time of payment",
+    "zeuspay.intro.prosAndCons.settledUponRedemption": "Payments settle on Lightning when redeemed in the ZEUS app",
+    "zeuspay.intro.prosAndCons.24hrs": "Payments must be redeemed within 24 hours or the payment is returned to the sender",
+    "zeuspay.intro.prosAndCons.channelRequired": "Requires a channel with the ZEUS LSP, with inbound liquidity",
+    "zeuspay.intro.prosAndCons.automaticallyAccepted": "Payments automatically accepted. No need to redeem manually in the ZEUS app.",
+    "zeuspay.intro.prosAndCons.noLspChannelNeeded": "No need for a channel with the ZEUS LSP",
+    "zeuspay.intro.prosAndCons.remotePlusNwc": "Requires a remote node with Nostr Wallet Connect",
+    "zeuspay.intro.prosAndCons.payPlusSubscription": "Requires a ZEUS Pay+ subscription",
+    "zeuspay.intro.ecash.overview": "Just starting your Lightning journey? The Cashu ecash powered address is a great way to get started. Works well on Nostr.",
+    "zeuspay.intro.zaplocker.overview": "The first-of-its-kind self-custodial Lightning address for mobile wallets.",
+    "zeuspay.intro.nwc.overview": "Connect directly to your remote node using Nostr Wallet Connect.",
+    "zeuspay.enableEcash": "Enable ecash",
+    "zeuspay.getChannel": "Get channel",
     "androidNotification.lndRunningBackground": "LND is running in the background",
     "androidNotification.shutdown": "Shutdown"
 }
