--- a/locales/es.json
+++ b/locales/es.json
@@ -18,6 +18,8 @@
     "general.continueQuestion": "¿Continuar?",
     "general.readOnlyWallet": "Cartera de solo lectura",
     "general.custodialWallet": "Billetera de custodia",
+    "general.selfCustodial": "Self-custodial",
+    "general.custodial": "Custodial",
     "general.show": "Mostrar",
     "general.close": "Cerrar",
     "general.hide": "Ocultar",
@@ -26,6 +28,7 @@
     "general.goBack": "Volver",
     "general.lightning": "Lightning",
     "general.onchain": "On-chain",
+    "general.cashu": "Cashu",
     "general.activity": "Actividad",
     "general.transaction": "Transacción",
     "general.confirmed": "Confirmado",
@@ -96,6 +99,7 @@
     "general.invalid": "Inválido",
     "general.createdAt": "Creado en",
     "general.expiresAt": "Vence en",
+    "general.expiresOn": "Expires on",
     "general.id": "ID",
     "general.hash": "Hash",
     "general.kind": "Tipo",
@@ -133,6 +137,15 @@
     "general.unknown": "Desconocido",
     "general.retry": "Reintentar",
     "general.response": "Respuesta",
+    "general.approximately": "Approximately",
+    "general.selfCustody": "Self-custody",
+    "general.ecash": "Ecash",
+    "general.errorConnecting": "Error connecting",
+    "general.bitcoinPayment": "Bitcoin payment",
+    "general.unspent": "Unspent",
+    "general.remote": "Remoto",
+    "general.getStarted": "Empezar",
+    "general.comingSoon": "Coming soon",
     "channel.status.good": "Bien",
     "channel.status.stable": "Estable",
     "channel.status.unstable": "Inestable",
@@ -713,6 +726,13 @@
     "views.ContactInfo.title": "Datos de contacto",
     "views.Tools.title": "Herramientas",
     "views.Tools.developers": "Desarrolladores",
+    "views.Tools.cashu": "Cashu Tools",
+    "views.Tools.cashu.bumpWalletCounters": "Bump wallet counters",
+    "views.Tools.cashu.bumpWalletCounters.subtitle": "Helpful if your wallet counters get out of sync and you encounter 'Outputs have already been signed before' errors.",
+    "views.Tools.cashu.deleteData": "Delete all Cashu data",
+    "views.Tools.cashu.deleteData.confirmTitle": "Are you sure you want to delete all your Cashu data?",
+    "views.Tools.cashu.deleteData.confirmMessage": "Funds can still be restored by re-adding your mints, but transaction history will be lost.",
+    "stores.CashuStore.dataDeletedMessage": "Your Cashu data has been deleted.",
     "views.Tools.developerTools.title": "Herramientas para desarrolladores",
     "views.Tools.developerTools.noItemsExist": "No existen elementos",
     "views.Settings.title": "Ajustes",
@@ -1015,6 +1035,7 @@
     "views.ActivityFilter.endDate": "Fecha Final",
     "views.ActivityFilter.lightningPayments": "Pagos Lightning",
     "views.ActivityFilter.onChainPayments": "Pagos On-chain",
+    "views.ActivityFilter.cashuPayments": "Cashu payments",
     "views.ActivityFilter.minimumAmount": "Cantidad minima (sats)",
     "views.ActivityFilter.maximumAmount": "Cantidad máxima (sats)",
     "views.ActivityFilter.maximumAmountPlaceHolder":"Sin limite",
@@ -1137,6 +1158,7 @@
     "components.ChannelPicker.modal.description.multiple": "Seleccione los canal(es) que se utilizarán en esta operación. Es posible que desee utilizar únicamente canales específicos para preservar su privacidad.",
     "components.LayerBalances.moreAccounts": "Más cuentas",
     "components.LayerBalances.moveFundsToLn": "Trasladar fondos en cadena a Lightning",
+    "components.LayerBalances.lightningViaEcash": "Lightning via ecash",
     "backends.LND.wsReq.warning": "Es posible que tenga que activar la verificación de certificados para realizar este tipo de llamadas",
     "backends.LND.restReq.connectionError": "Error de conexión",
     "utils.handleAnything.lightningAddressError": "Error en obtener datos de Dirección de Lightning",
@@ -1160,6 +1182,8 @@
     "stores.LSPStore.error": "Error LSP",
     "stores.LSPStore.connectionError": "No se pudo conectar a LSP. Verifique su configuración de LSP o vuelva a intentarlo más tarde.",
     "stores.LightningAddressStore.preimageNotFound": "No se encontró la imagen previa en su dispositivo. ¿Cambió recientemente de dispositivo?",
+    "stores.LightningAddressStore.Cashu.quoteNotPaid": "Quote not paid",
+    "stores.LightningAddressStore.Cashu.quotePaymentErr": "Error checking for quote payment",
     "error.connectionRefused": "Host inalcanzable. Intente reiniciar su nodo o su proceso Tor.",
     "error.hostUnreachable": "Host inalcanzable. Intente reiniciar su nodo o su proceso Tor.",
     "error.nodeConnectError": "No se puede conectar al nodo. Verifique que el host y el puerto sean correctos y que el servicio esté en ejecución.",
@@ -1173,6 +1197,7 @@
     "error.failureReasonInsufficientBalance": "Balance local insuficiente",
     "error.invalidMacaroon": "Macarrón no válido. Verifique que haya ingresado el macarrón correcto para este nodo.",
     "error.invalidResponse": "Se recibieron datos de respuesta no válidos del servidor",
+    "error.serviceConnection": "Error connecting to service. Please try again later.",
     "pos.views.Wallet.PosPane.noOrders": "No hay pedidos abiertos en este momento. Para enviar a Zeus, marque el pedido como 'otro tipo de pago' con una nota que incluye 'Zeus', 'BTC' o 'Bitcoin'",
     "pos.views.Wallet.PosPane.noOrdersStandalone": "No hay pedidos abiertos en este momento.",
     "pos.views.Wallet.PosPane.noOrdersPaid": "Todavía no se han pagado pedidos",
@@ -1210,10 +1235,17 @@
     "views.Settings.LightningAddress.chooseHandle": "Elija un apodo",
     "views.Settings.LightningAddress.zaplockerVerification": "Verificación de Zaplocker",
     "views.Settings.LightningAddress.noPaymentsToRedeem": "No hay pagos para canjear. Vuelva más tarde.",
+    "views.Settings.LightningAddress.noNeedToRedeem": "No redeem step required. Payments are sent directly to your wallet.",
     "views.Settings.LightningAddress.statusExplainer1": "Esta es la cantidad de pagos que se le pueden hacer mientras está fuera de línea.",
     "views.Settings.LightningAddress.statusExplainer2": "Se enviarán más hash de pago al servidor automáticamente cuando sea necesario, para que pueda continuar recibiendo pagos.",
     "views.Settings.LightningAddress.generatingPreimages": "Generando preimages",
     "views.Settings.LightningAddress.ChangeAddress": "Dirección de cambio",
+    "views.Settings.LightningAddress.webPortalPos": "Web portal: Point of Sale",
+    "views.Settings.LightningAddress.webPortalPos.enableFiat": "Enable fiat pricing",
+    "views.Settings.LightningAddress.webPortalPos.syncSettings": "Sync settings",
+    "views.Settings.LightningAddress.switchToCashu": "Switch to Cashu Lightning address",
+    "views.Settings.LightningAddress.switchToNWC": "Switch to NWC Lightning address",
+    "views.Settings.LightningAddress.switchToZaplocker": "Switch to Zaplocker Lightning address",
     "views.Settings.LightningAddress.nostrKeys.changeWarning": "ADVERTENCIA: Cambiar sus claves Nostr eliminará sus pagos pendientes. Por favor, canjee sus pagos pendientes antes de enviar nuevas claves.",
     "views.Settings.LightningAddress.explainer1": "Para comenzar con una dirección Lightning, primero debes tener un canal Lightning desde ZEUS LSP con liquidez entrante.",
     "views.Settings.LightningAddress.explainer2": "La forma más fácil de hacerlo es comprar un canal 0-conf. Simplemente genere una factura y pague desde otra billetera Lightning.",
@@ -1221,6 +1253,11 @@
     "views.Settings.LightningAddress.get0ConfChan": "Obtener canal 0-conf",
     "views.Settings.LightningAddress.getStandardChan": "Obtener canal estándar",
     "views.Settings.LightningAddress.generateNew": "Generar nuevas preimágenes",
+    "views.Settings.LightningAddress.upgrade": "Upgrade to ZEUS Pay+",
+    "views.Settings.LightningAddress.changeConnectionString": "Change connection string",
+    "views.Settings.LightningAddress.testConnectionString": "Test connection string",
+    "views.Settings.LightningAddress.connectionTestSuccess": "Connection test successful!",
+    "views.Settings.LightningAddress.viewPlusPerks": "View perks",
     "views.Settings.LightningAddressSettings.title": "Configuración de la dirección Lightning",
     "views.Settings.LightningAddressSettings.automaticallyAccept": "Acepte automáticamente los pagos al inicio",
     "views.Settings.LightningAddressSettings.automaticallyAcceptAttestationLevel": "Nivel de certificación para la aceptación automática",
@@ -1247,6 +1284,10 @@
     "views.Settings.LightningAddressInfo.invalidAttestationDetails": "Certificaciones inválidas o conflictivas. Presione para ver los detalles.",
     "views.Settings.LightningAddressInfo.noAttestationDetails": "No se encontraron certificaciones Nastr. La billetera del remitente probablemente aún no lo admite.",
     "views.Settings.LightningAddressInfo.learnAboutZaplocker": "Aprenda más sobre Zaplocker",
+    "views.LightningAddress.ZeusPayPlus.subscribe": "Purchase annual subscription",
+    "views.LightningAddress.ZeusPayPlus.extend": "Extend subscription",
+    "views.LightningAddress.ZeusPayPlus.subActive": "Subscription Active",
+    "views.LightningAddress.ZeusPayPlus.noActiveSub": "No active subscription",
     "views.Settings.Attestations.title": "Atestaciónes",
     "views.Settings.Attestations.noAttestationsFound": "No se encontraron certificaciones",
     "views.Settings.Attestation.title": "Atestación",
@@ -1303,6 +1344,12 @@
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.apiUrl": "API URL",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.customApiUrl": "URL de API personalizada",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.start": "Iniciar barrido",
+    "views.Settings.Ecash.title": "Ecash settings",
+    "views.Settings.Ecash.enableEcash": "Enable Cashu ecash",
+    "views.Settings.Ecash.enableEcash.subtitle1": "Cashu is a Chaumian ecash protocol built for Bitcoin. It's a custodial solution but with better privacy than a traditional account.",
+    "views.Settings.Ecash.enableEcash.subtitle2": "You'll only want to store in Cashu what you can afford to lose, but it can make for a great solution for those who just want to test ZEUS for the first time or don't have enough bitcoin to open a Lightning channel yet.",
+    "views.Settings.Ecash.enableEcash.subtitle3": "ZEUS will periodically prompt you to upgrade to self-custody, once you have enough bitcoin to purchase a Lightning channel.",
+    "views.Settings.Ecash.enableEcash.learnMore": "Learn more about Cashu",
     "views.LspExplanation.text1": "Zeus es una billetera Lightning de custodia propria. Para enviar o recibir un pagos lightning, debe abrir un canal de pago lightning, que tiene una tarifa de configuración.",
     "views.LspExplanation.text2": "Una vez que el canal esté configurado, solo tendrá que pagar tarifas de red normal hasta que su canal agote su capacidad.",
     "views.LspExplanation.buttonText": "Obtenga más información sobre liquidez",
@@ -1386,6 +1433,86 @@
     "views.OnChainAddresses.sortBy.balanceDescending": "Equilibrio (descendente)",
     "views.OnChainAddresses.createAddress": "Crear dirección",
     "views.OnChainAddresses.changeAddresses": "Direcciónes de cambio",
+    "views.Cashu.ReceiveEcash.title": "Receive Ecash",
+    "views.Cashu.ReceiveEcash.readTokenFromClipboard": "Read token from clipboard",
+    "views.Cashu.CashuInvoice.title": "Cashu Invoice",
+    "views.Cashu.CashuPayment.title": "Cashu Payment",
+    "cashu.mint": "Menta",
+    "cashu.mints": "Mints",
+    "cashu.mintUrl": "Mint URL",
+    "cashu.token": "Cashu token",
+    "cashu.receivedToken": "Received Cashu token",
+    "cashu.sentToken": "Sent Cashu token",
+    "cashu.unspentToken": "Unspent Cashu token",
+    "cashu.tapToConfigure": "No mints found. Tap to configure",
+    "cashu.tapToConfigure.short": "Tap to configure",
+    "cashu.mintToken": "Mint token",
+    "cashu.mintEcashToken": "Mint ecash token",
+    "cashu.errorAddingMint": "Error adding mint",
+    "views.Cashu.AddMint.title": "Add mint",
+    "views.Cashu.AddMint.discover": "Discover mints",
+    "views.Cashu.AddMint.discover.explainer": "These mints were recommended by other Nostr users. Read reviews at bitcoinmints.com. Be careful and do your own research before using a mint.",
+    "views.Cashu.AddMint.reviews": "Read mint reviews",
+    "views.Mints.noMints": "No mints added yet",
+    "views.Cashu.Mint.supportedNuts": "Supported Nuts",
+    "views.Cashu.Mint.removeMint": "Remove mint",
+    "views.Cashu.Mint.selectedMint": "This is your selected mint",
+    "views.Cashu.Mint.setSelected": "Set selected",
+    "views.Cashu.Mint.restoration": "Recovering your Cashu proofs and balances",
+    "views.Cashu.Mint.restorationKeyset": "Restoring keyset",
+    "views.Cashu.Mint.checkForExistingBalances": "Check for existing balances",
+    "views.Cashu.CashuPaymentRequest.sendingFrom": "Sending from",
+    "views.Cashu.CashuPaymentRequest.noBalance": "No ecash balance available. Receive a payment first.",
+    "views.Cashu.CashuPayment.inTransitPayment": "In Transit Cashu Payment",
+    "views.Cashu.CashuPayment.failedPayment": "Failed Cashu Payment",
+    "views.Cashu.CashuToken.proofCount": "Number of proofs",
+    "views.Cashu.CashuToken.notSupported": "This token has a unit that is not supported",
+    "views.Cashu.CashuToken.success": "Successfully imported token",
+    "views.Cashu.CashuToken.meltTokenSelfCustody": "Melt token to self-custody",
+    "views.Cashu.CashuToken.tokenSweep": "Cashu token sweep",
+    "views.Cashu.CashuToken.feeAdjusted": "Fee adjusted",
+    "views.Cashu.LightningAddressInfo.explainer1": "This is a custodial Lightning address tied to your Cashu wallet.",
+    "views.Cashu.LightningAddressInfo.explainer2": "It leverages NUT-20 to lock all incoming payments to your Cashu wallet's pubkey. There is no time period in which you must redeem the funds; they are available for you to pull into your Cashu wallet indefinitely.",
+    "views.Cashu.UnspentTokens.title": "Unspent tokens",
+    "views.Cashu.UnspentTokens.noUnspentTokens": "No unspent tokens",
+    "views.LightningAddress.NWC.explainer1": "This is a self-custodial Lightning address that connects to a remote node using Nostr Wallet Connect (NWC).",
+    "views.LightningAddress.NWC.explainer2": "Invoices are created directly on your node. There is no need to redeem the funds; they are available on your remote node immediately.",
+    "stores.CashuStore.initializingWallet": "Initializing ecash wallet",
+    "stores.CashuStore.startingWallet": "Starting ecash wallet",
+    "stores.CashuStore.alreadyPaid": "Invoice has already been paid.",
+    "stores.CashuStore.alreadySpent": "Token has already been spent.",
+    "stores.CashuStore.pending": "Payment is pending.",
+    "stores.CashuStore.claimError": "Error claming token",
+    "stores.CashuStore.errorMintingToken": "Error minting token",
+    "stores.CashuStore.notEnoughFunds": "Not enough funds to cover payment",
+    "stores.CashuStore.feeExceedsAmt": "Melt fees match or exceed token amount",
+    "cashu.upgradePrompt.title": "Upgrade to Self-Custody?",
+    "cashu.upgradePrompt.messageGeneral": "Your ecash balance is growing! Consider upgrading to a self-custodial Lightning wallet for better security and control over your funds.",
+    "cashu.upgradePrompt.message10k": "You now have enough sats to purchase your first Lightning channel! Upgrade to self-custody to truly own your bitcoin.",
+    "cashu.upgradePrompt.message25k": "Your ecash balance is growing! To ensure you can't lose your funds, consider upgrading to a self-custodial Lightning wallet.",
+    "cashu.upgradePrompt.message50k": "With this balance, it's strongly recommended to move to a self-custodial Lightning wallet. Don't trust, verify!",
+    "cashu.upgradePrompt.message100k": "High balance detected! It's crucial to upgrade to a self-custodial Lightning wallet now to secure your funds.",
+    "cashu.upgradePrompt.purchaseChannel": "Purchase Channel",
+    "cashu.upgradePrompt.learnMore": "Learn About Self-Custody",
+    "zeuspay.intro.explainer1": "ZEUS Pay is a service that give you a Lightning address, like satoshi@zeuspay.com, for receiving payments to your Lightning wallet.",
+    "zeuspay.intro.explainer2": "Below are the kinds of Lightning addresses you can have for your wallet type:",
+    "zeuspay.intro.prosAndCons": "Pros and cons",
+    "zeuspay.intro.prosAndCons.nostrVerification": "Nostr-based recipient verification system",
+    "zeuspay.intro.prosAndCons.redeemInApp": "Payments must be redeemed in the ZEUS app",
+    "zeuspay.intro.prosAndCons.noExpiry": "Unredeemed payments do not expire",
+    "zeuspay.intro.prosAndCons.settledUponPayment": "Payments settle on Lightning at time of payment",
+    "zeuspay.intro.prosAndCons.settledUponRedemption": "Payments settle on Lightning when redeemed in the ZEUS app",
+    "zeuspay.intro.prosAndCons.24hrs": "Payments must be redeemed within 24 hours or the payment is returned to the sender",
+    "zeuspay.intro.prosAndCons.channelRequired": "Requires a channel with the ZEUS LSP, with inbound liquidity",
+    "zeuspay.intro.prosAndCons.automaticallyAccepted": "Payments automatically accepted. No need to redeem manually in the ZEUS app.",
+    "zeuspay.intro.prosAndCons.noLspChannelNeeded": "No need for a channel with the ZEUS LSP",
+    "zeuspay.intro.prosAndCons.remotePlusNwc": "Requires a remote node with Nostr Wallet Connect",
+    "zeuspay.intro.prosAndCons.payPlusSubscription": "Requires a ZEUS Pay+ subscription",
+    "zeuspay.intro.ecash.overview": "Just starting your Lightning journey? The Cashu ecash powered address is a great way to get started. Works well on Nostr.",
+    "zeuspay.intro.zaplocker.overview": "The first-of-its-kind self-custodial Lightning address for mobile wallets.",
+    "zeuspay.intro.nwc.overview": "Connect directly to your remote node using Nostr Wallet Connect.",
+    "zeuspay.enableEcash": "Enable ecash",
+    "zeuspay.getChannel": "Get channel",
     "androidNotification.lndRunningBackground": "LND se está ejecutando en segundo plano",
     "androidNotification.shutdown": "Apagar"
 }
